feat: more translations

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Сметка",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "passphrase": "Паролна фраза",
+  "paste_csv_content": "Поставете CSV съдържанието тук",
+  "payload": "Полезен товар",
+  "payload_hash": "Хеш на полезния товар",
+  "payload_length": "Дължина на полезния товар",
+  "payment": "Плащане",
+  "payments": "Плащания",
+  "peer": "Връстник",
+  "peers": "Връстници",
+  "pending": "В очакване",
+  "percentage": "Процент",
+  "pin_hint": "ПИН кодът се използва за проверка на действията, извършени с вашия акаунт. Това може да е кратка буквено-цифрова стойност, която е лесна за запомняне. Ако забравите своя ПИН, можете просто да пресъздадете акаунта си с помощта на предварително генерираната парола.",
+  "platform": "Платформа",
+  "poll_creation": "Създаване на анкета",
+  "previous_block": "Предишен блок",
+  "previous_block_hash": "Предишен блок хеш",
+  "price": "Цена",
+  "price_chart_7d": "Графика на цените 7 дни",
+  "priority_fee": "Приоритет",
+  "product": "Продукт",
+  "public_key": "Публичен ключ",
+  "purchase": "Покупка",
+  "qr_code": "QR код",
+  "qr_code_data": "Данни за QR кода",
+  "quantity": "Количество",
+  "recent_transactions": "Последни транзакции",
+  "recent_transactions_since": "Последни транзакции от",
+  "recipient": "Получател",
+  "recipient_address": "Адрес на получателя",
+  "recipient_id": "Идентификатор на получателя",
+  "recipient_no_public_key": "Акаунтът на получателя няма публичен ключ, което означава, че никога не е имал изходяща транзакция. Сметката има салдо от __burst__ Signa. Моля, проверете отново адреса на получателя си, преди да изпратите.",
+  "recipients": "Получатели",
+  "record": "Запис",
+  "referenced_transaction_full_hash": "Пълен хеш на препратената транзакция",
+  "refund": "Възстановяване",
+  "refunded": "Възстановено",
+  "register": "Регистрирам",
+  "register_alias": "Регистрирайте псевдоним",
+  "repeat": "Повторете",
+  "request_burst": "Поискайте Signa",
+  "request_processing_time": "Време за обработка на заявката",
+  "reset_recipients": "Нулиране на получателите",
+  "reward_recipient": "Награда получател",
+  "same_out": "Същата сума",
+  "scoop_num": "Номер на лъжичката",
+  "search": "Търсене",
+  "search_or_start_message": "Търсене или стартиране на ново съобщение",
+  "secure": "Сигурно",
+  "seed_password_generator": "Преместете курсора си, за да поставите генератора на случайни числа и да създадете сигурна парола.",
+  "select_node": "Изберете Node",
+  "select_node_description": "Изберете връстника, с който искате да се свържете. Можете да използвате предложен връстник, но може и да въведете произволен URL адрес на връстник.",
+  "select_recipients": "Изберете Получатели",
+  "sell": "Продавам",
+  "semicolon": "Точка и запетая",
+  "send": "Изпрати",
+  "send_burst": "Изпратете Signa",
+  "sender": "Подател",
+  "sender_address": "Адрес на подателя",
+  "sender_id": "Идент. № на подателя",
+  "sender_public_key": "Публичен ключ на подателя",
+  "set_account_info": "Задайте информация за акаунта",
+  "set_reward_recipient": "Задайте получател на наградата",
+  "settings": "Настройки",
+  "signature": "Подпис",
+  "signature_hash": "Подпис Хеш",
+  "smart_contract": "Интелигентен договор",
+  "smart_contract_creation": "Създаване на интелигентен договор",
+  "smart_contract_payment": "Плащане по договор",
+  "spend_all": "Прекарайте всички",
+  "standard_fee": "Стандартен",
+  "state": "Щат",
+  "status": "Състояние",
+  "submit": "Изпращане",
+  "subscriptions": "Абонаменти",
+  "subtype": "Подтип",
+  "success_alias_register": "Псевдонимът се регистрира успешно.",
+  "success_clipboard_copy": "Копирано в клипборда успешно.",
+  "success_send_money": "Signa е изпратена.",
+  "success_set_account_info": "Информацията за вашия акаунт е запазена успешно.",
+  "success_set_reward_recipient": "Получателят на вашата награда е зададен успешно!",
+  "suggested_fee": "Предложени такси",
+  "tabulator": "Табулатор",
+  "time": "Време",
+  "timestamp": "Клеймо за време",
+  "title": "Заглавие",
+  "to": "Да се",
+  "token": "Жетон",
+  "total": "Обща сума",
+  "total_amount": "Обща сума",
+  "total_fee": "Обща такса",
+  "transaction": "Транзакция",
+  "transaction_details": "Подробности за транзакцията",
+  "transaction_id": "номер на транзакцията",
+  "transactions": "Транзакции",
+  "transfer": "Прехвърляне",
+  "try_again": "Опитай пак",
+  "type": "Тип",
+  "unknown": "Неизвестно",
+  "unknown_recipients": "Открити са неизвестни получатели",
+  "unknown_recipients_text": "Следните получатели не могат да бъдат потвърдени:",
+  "unknown_version": "Версия неизвестна",
+  "update": "Актуализиране",
+  "update_available": "Налична е нова актуализация",
+  "update_burst_account": "Импортиране на съществуващ акаунт",
+  "update_check": "Проверка на актуализацията",
+  "update_up_to_date": "Вече имате най-новата версия. Няма нужда да се актуализира.",
+  "uploaded": "Качено",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Валидно",
+  "valid_thru": "Валидно до",
+  "validate": "Потвърдете",
+  "validating_node": "Проверка ...",
+  "verified_source": "Проверен и сигурен източник",
+  "verify": "Проверете",
+  "version": "Версия",
+  "volume_24h": "Обем 24ч",
+  "vote": "Гласувайте",
+  "vote_casting": "Гласуване",
+  "warning": "Внимание",
+  "watch_burst_account": "Наблюдавайте акаунта",
+  "wrong_pin": "Грешен ПИН",
+  "yes": "Да",
+  "yesterdays_change": "Промяна в последния 24 час",
+  "you": "Вие",
+  "you_sent_burst": "Изпратихте Signa",
+  "your_address": "Вашият адрес",
+  "your_name": "Твоето име",
+  "your_passphrase": "Вашата паролна фраза",
+  "youve_got_burst": "Имате Signa!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Поставете ангажимент",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Отмени ангажимента",
+  "reward_recipient_assignment": "Възлагане на награда",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Успешно актуализиран ангажимент за добив",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "В момента избран възел",
+  "toggle_nodeselection_mode": "Превключете, за да превключвате между ръчен или автоматичен избор на възел",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "себе си"
 }
