--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Compte",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
+  "passphrase": "Contrasenya",
+  "paste_csv_content": "Enganxeu aquí el contingut CSV",
+  "payload": "Càrrega útil",
+  "payload_hash": "Hash de càrrega útil",
+  "payload_length": "Longitud de la càrrega útil",
+  "payment": "Pagament",
+  "payments": "Pagaments",
+  "peer": "Company",
+  "peers": "Companys",
+  "pending": "Pendents",
+  "percentage": "Percentatge",
+  "pin_hint": "El PIN s’utilitza per verificar les accions realitzades amb el vostre compte. Pot ser un valor alfanumèric curt i fàcil de memoritzar. Si oblideu el vostre PIN, podeu recrear el vostre compte mitjançant la contrasenya generada prèviament.",
+  "platform": "Plataforma",
+  "poll_creation": "Creació d'enquestes",
+  "previous_block": "Bloc anterior",
+  "previous_block_hash": "Anterior Block Hash",
+  "price": "Preu",
+  "price_chart_7d": "Taula de preus 7 dies",
+  "priority_fee": "Prioritat",
+  "product": "Producte",
+  "public_key": "Clau pública",
+  "purchase": "Compra",
+  "qr_code": "Codi QR",
+  "qr_code_data": "Dades de codi QR",
+  "quantity": "Quantitat",
+  "recent_transactions": "Transaccions recents",
+  "recent_transactions_since": "Transaccions recents des de",
+  "recipient": "Destinatari",
+  "recipient_address": "Adreça del destinatari",
+  "recipient_id": "Identificador del destinatari",
+  "recipient_no_public_key": "El compte destinatari no té una clau pública, és a dir, que mai no ha realitzat cap transacció de sortida. El compte té un saldo de __burst__ Signa. Comproveu la vostra adreça de destinatari abans d’enviar-la.",
+  "recipients": "Destinataris",
+  "record": "Registre",
+  "referenced_transaction_full_hash": "Hash complet de la transacció referenciat",
+  "refund": "Reembossament",
+  "refunded": "Reembossat",
+  "register": "Registra't",
+  "register_alias": "Registra àlies",
+  "repeat": "Repetiu",
+  "request_burst": "Sol·licita Signa",
+  "request_processing_time": "Temps de processament de sol·licituds",
+  "reset_recipients": "Restableix els destinataris",
+  "reward_recipient": "Destinatari de la recompensa",
+  "same_out": "La mateixa quantitat",
+  "scoop_num": "Número de pal",
+  "search": "Cerca",
+  "search_or_start_message": "Cerqueu o inicieu un missatge nou",
+  "secure": "Segur",
+  "seed_password_generator": "Mou el cursor per generar el generador de números aleatoris i crea una frase de contrasenya segura.",
+  "select_node": "Seleccioneu Node",
+  "select_node_description": "Seleccioneu el parell amb el qual vulgueu connectar-vos. Podeu utilitzar un parell suggerit, però també podeu introduir un URL de parell arbitrari.",
+  "select_recipients": "Seleccioneu Destinataris",
+  "sell": "Vendre",
+  "semicolon": "Punt i coma",
+  "send": "Envia",
+  "send_burst": "Envia Signa",
+  "sender": "Remitent",
+  "sender_address": "Adreça del remitent",
+  "sender_id": "Identificador del remitent",
+  "sender_public_key": "Clau pública del remitent",
+  "set_account_info": "Estableix la informació del compte",
+  "set_reward_recipient": "Estableix el destinatari de la recompensa",
+  "settings": "Configuració",
+  "signature": "Signatura",
   "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
+  "smart_contract": "Contracte intel·ligent",
+  "smart_contract_creation": "Creació de contractes intel·ligents",
+  "smart_contract_payment": "Pagament del contracte",
+  "spend_all": "Gasta-ho tot",
+  "standard_fee": "Estàndard",
+  "state": "Estat",
+  "status": "Estat",
+  "submit": "Presentar",
+  "subscriptions": "Subscripcions",
+  "subtype": "Subtipus",
+  "success_alias_register": "Alias s'ha registrat correctament.",
+  "success_clipboard_copy": "S'ha copiat amb èxit al porta-retalls.",
+  "success_send_money": "S'ha enviat Signa.",
+  "success_set_account_info": "La informació del vostre compte s'ha desat correctament.",
+  "success_set_reward_recipient": "El vostre destinatari de recompensa s'ha definit correctament.",
+  "suggested_fee": "Tarifes suggerides",
+  "tabulator": "Tabulador",
+  "time": "Temps",
+  "timestamp": "Marca de temps",
+  "title": "Títol",
+  "to": "Per a",
+  "token": "Testimoni",
   "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "total_amount": "Quantitat total",
+  "total_fee": "Comissió total",
+  "transaction": "Transacció",
+  "transaction_details": "Detalls de la transacció",
+  "transaction_id": "Identificador de transacció",
+  "transactions": "Transaccions",
+  "transfer": "Transferència",
+  "try_again": "Torna-ho a provar",
+  "type": "Tipus",
+  "unknown": "Desconegut",
+  "unknown_recipients": "Destinataris desconeguts detectats",
+  "unknown_recipients_text": "No s'han pogut validar els destinataris següents:",
+  "unknown_version": "Versió desconeguda",
+  "update": "Actualització",
+  "update_available": "Hi ha una nova actualització disponible",
+  "update_burst_account": "Importeu el compte existent",
+  "update_check": "Actualització de la comprovació",
+  "update_up_to_date": "Ja teniu la versió més recent. No cal actualitzar.",
+  "uploaded": "Carregat",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Vàlid",
+  "valid_thru": "Vàlid fins a",
+  "validate": "Validar",
+  "validating_node": "S'està validant ...",
+  "verified_source": "Font verificada i segura",
+  "verify": "Verifiqueu",
+  "version": "Versió",
+  "volume_24h": "Volum 24h",
+  "vote": "Vota",
+  "vote_casting": "Repartiment de vots",
+  "warning": "Advertiment",
+  "watch_burst_account": "Observeu el compte",
+  "wrong_pin": "PIN incorrecte",
+  "yes": "Sí",
+  "yesterdays_change": "Canvi de les darreres 24 hores",
+  "you": "Vostè",
+  "you_sent_burst": "Has enviat Signa",
+  "your_address": "La teva direcció",
+  "your_name": "El teu nom",
+  "your_passphrase": "La vostra frase de contrasenya",
+  "youve_got_burst": "Ja tens Signa!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Estableix el compromís",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Revocar el compromís",
+  "reward_recipient_assignment": "Assignació de recompenses",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "S'ha actualitzat correctament el compromís de mineria",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Node seleccionat actualment",
+  "toggle_nodeselection_mode": "Alterna per canviar entre la selecció manual o automàtica de nodes",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "jo mateix"
 }
