--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Účet",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
+  "passphrase": "Přístupová fráze",
+  "paste_csv_content": "Sem vložte obsah CSV",
+  "payload": "Užitečné zatížení",
+  "payload_hash": "Užitečné zatížení",
+  "payload_length": "Délka užitečného zatížení",
+  "payment": "Způsob platby",
+  "payments": "Platby",
   "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
+  "peers": "Vrstevníci",
+  "pending": "čekající",
+  "percentage": "Procento",
+  "pin_hint": "PIN se používá k ověření akcí provedených s vaším účtem. Může to být krátká alfanumerická hodnota, kterou si snadno zapamatujete. Pokud zapomenete PIN, můžete jednoduše vytvořit svůj účet pomocí dříve generované přístupové fráze.",
+  "platform": "Plošina",
+  "poll_creation": "Tvorba hlasování",
+  "previous_block": "Předchozí blok",
+  "previous_block_hash": "Předchozí blokovat hash",
+  "price": "Cena",
+  "price_chart_7d": "Cenový graf 7 dní",
+  "priority_fee": "Přednost",
+  "product": "Produkt",
+  "public_key": "Veřejný klíč",
+  "purchase": "Nákup",
+  "qr_code": "QR kód",
+  "qr_code_data": "Data QR kódu",
+  "quantity": "Množství",
+  "recent_transactions": "Nedávné transakce",
+  "recent_transactions_since": "Nedávné transakce od",
+  "recipient": "Příjemce",
+  "recipient_address": "Adresa příjemce",
+  "recipient_id": "ID příjemce",
+  "recipient_no_public_key": "Účet příjemce nemá veřejný klíč, což znamená, že nikdy neměl odchozí transakci. Účet má zůstatek __burst__ Signa. Před odesláním prosím zkontrolujte svoji adresu příjemce.",
+  "recipients": "Příjemci",
+  "record": "Záznam",
+  "referenced_transaction_full_hash": "Plná hash pro odkazovanou transakci",
+  "refund": "Vrácení peněz",
+  "refunded": "Vráceno",
+  "register": "Registrovat",
+  "register_alias": "Registrovat Alias",
+  "repeat": "Opakovat",
+  "request_burst": "Požádejte o Signu",
+  "request_processing_time": "Vyžádejte si čas na zpracování",
+  "reset_recipients": "Resetovat příjemce",
+  "reward_recipient": "Příjemce odměny",
+  "same_out": "Stejné množství",
+  "scoop_num": "Lopatkové číslo",
+  "search": "Vyhledávání",
+  "search_or_start_message": "Vyhledejte nebo začněte novou zprávu",
+  "secure": "Zajistit",
+  "seed_password_generator": "Pohybujte kurzorem a nasaďte generátor náhodných čísel a vytvořte bezpečnou přístupovou frázi.",
+  "select_node": "Vyberte uzel",
+  "select_node_description": "Vyberte partnera, ke kterému se chcete připojit. Můžete použít doporučený peer, ale můžete také zadat libovolnou peer url.",
+  "select_recipients": "Vyberte Příjemci",
+  "sell": "Prodat",
+  "semicolon": "Středník",
+  "send": "Poslat",
+  "send_burst": "Pošlete Signu",
+  "sender": "Odesílatel",
+  "sender_address": "Adresa odesílatele",
+  "sender_id": "ID odesílatele",
+  "sender_public_key": "Veřejný klíč odesílatele",
+  "set_account_info": "Nastavit informace o účtu",
+  "set_reward_recipient": "Nastavit příjemce odměny",
+  "settings": "Nastavení",
+  "signature": "Podpis",
+  "signature_hash": "Podpisový hash",
+  "smart_contract": "Chytrá smlouva",
+  "smart_contract_creation": "Chytré vytvoření smlouvy",
+  "smart_contract_payment": "Platba smlouvy",
+  "spend_all": "Utratit vše",
   "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "state": "Stát",
+  "status": "Postavení",
+  "submit": "Předložit",
+  "subscriptions": "Předplatné",
+  "subtype": "Podtyp",
+  "success_alias_register": "Alias byl úspěšně zaregistrován.",
+  "success_clipboard_copy": "Úspěšně zkopírováno do schránky.",
+  "success_send_money": "Signa byla odeslána.",
+  "success_set_account_info": "Informace o vašem účtu byly úspěšně uloženy.",
+  "success_set_reward_recipient": "Váš příjemce odměny byl úspěšně nastaven!",
+  "suggested_fee": "Navrhované poplatky",
+  "tabulator": "Tabulátor",
+  "time": "Čas",
+  "timestamp": "Časové razítko",
+  "title": "Titul",
+  "to": "Na",
+  "token": "Žeton",
+  "total": "Celkový",
+  "total_amount": "Celková částka",
+  "total_fee": "Celkový poplatek",
+  "transaction": "Transakce",
+  "transaction_details": "Detaily transakce",
+  "transaction_id": "ID transakce",
+  "transactions": "Transakce",
+  "transfer": "Převod",
+  "try_again": "Zkus to znovu",
+  "type": "Typ",
+  "unknown": "Neznámý",
+  "unknown_recipients": "Zjištěni neznámí příjemci",
+  "unknown_recipients_text": "Následující příjemce nelze ověřit:",
+  "unknown_version": "Verze neznámá",
+  "update": "Aktualizace",
+  "update_available": "K dispozici nová aktualizace",
+  "update_burst_account": "Importujte stávající účet",
+  "update_check": "Kontrola aktualizace",
+  "update_up_to_date": "Již máte nejnovější verzi. Není třeba aktualizovat.",
+  "uploaded": "Nahráno",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Platný",
+  "valid_thru": "Platné",
+  "validate": "Ověřit",
+  "validating_node": "Ověřování ...",
+  "verified_source": "Ověřený a bezpečný zdroj",
+  "verify": "Ověřit",
+  "version": "Verze",
+  "volume_24h": "Svazek 24 hodin",
+  "vote": "Hlasování",
+  "vote_casting": "Hlasování",
+  "warning": "Varování",
+  "watch_burst_account": "Sledujte účet",
+  "wrong_pin": "Chybný PIN",
+  "yes": "Ano",
+  "yesterdays_change": "Změna za posledních 24 hodin",
+  "you": "Vy",
+  "you_sent_burst": "Poslali jste Signu",
+  "your_address": "Vaše adresa",
+  "your_name": "Tvé jméno",
+  "your_passphrase": "Vaše přístupová fráze",
+  "youve_got_burst": "Máte Signu!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Stanovit závazek",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Odvolat závazek",
+  "reward_recipient_assignment": "Přiřazení odměn",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Úspěšně aktualizován váš závazek k těžbě",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Aktuálně vybraný uzel",
+  "toggle_nodeselection_mode": "Přepnutím přepínáte mezi ručním nebo automatickým výběrem uzlu",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "já"
 }
