--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -95,7 +95,7 @@
   "csv_error_max_limit_same_multiout": "Höchstgrenze für Multiout mit gleichem Betrag überschritten. Grenze ist:",
   "csv_error_unreadable_format": "Unlesbares Format",
   "current_version": "Aktuelle Version",
-  "dashboard": "Instrumententafel",
+  "dashboard": "Dashboard",
   "dashboard_welcome_title": "Willkommen bei Phoenix! Hier werden Deine aktuellesten Kontostände angezeigt.",
   "data": "Daten",
   "date": "Datum",
@@ -287,7 +287,7 @@
   "qr_code": "QR-Code",
   "qr_code_data": "QR-Code-Daten",
   "quantity": "Menge",
-  "recent_transactions": "kürzliche Transaktionen",
+  "recent_transactions": "Neueste Transaktionen",
   "recent_transactions_since": "Letzte Transaktionen seit",
   "recipient": "Empfänger",
   "recipient_address": "Empfängeradresse",
@@ -377,7 +377,7 @@
   "verified_source": "Verifizierte und sichere Quelle",
   "verify": "Überprüfen",
   "version": "Ausführung",
-  "volume_24h": "Lautstärke 24h",
+  "volume_24h": "Handelsvolumen 24h",
   "vote": "Abstimmung",
   "vote_casting": "Stimmenabgabe",
   "warning": "Warnung",
