--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "λογαριασμός",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "passphrase": "Φράση πρόσβασης",
+  "paste_csv_content": "Επικολλήστε το περιεχόμενο CSV εδώ",
+  "payload": "Φορτίο επί πληρωμή",
+  "payload_hash": "Ωφέλιμο φορτίο",
+  "payload_length": "Μήκος ωφέλιμου φορτίου",
+  "payment": "Πληρωμή",
+  "payments": "Πληρωμές",
+  "peer": "Συνομήλικος",
+  "peers": "Ομότιμοι",
+  "pending": "εκκρεμής",
+  "percentage": "Ποσοστό",
+  "pin_hint": "Το PIN χρησιμοποιείται για την επαλήθευση των ενεργειών που πραγματοποιούνται με τον λογαριασμό σας. Μπορεί να είναι μια σύντομη αλφαριθμητική τιμή που είναι εύκολο να απομνημονευθεί. Εάν ξεχάσετε το PIN σας, μπορείτε απλά να δημιουργήσετε ξανά τον λογαριασμό σας χρησιμοποιώντας τη φράση πρόσβασης που δημιουργήθηκε προηγουμένως.",
+  "platform": "Πλατφόρμα",
+  "poll_creation": "Δημιουργία ψηφοφορίας",
+  "previous_block": "Προηγούμενο μπλοκ",
+  "previous_block_hash": "Προηγούμενο Block Hash",
+  "price": "Τιμή",
+  "price_chart_7d": "Διάγραμμα τιμών 7 ημέρες",
+  "priority_fee": "Προτεραιότητα",
+  "product": "Προϊόν",
+  "public_key": "Δημόσιο κλειδί",
+  "purchase": "Αγορά",
+  "qr_code": "Κωδικός QR",
+  "qr_code_data": "Δεδομένα κώδικα QR",
+  "quantity": "Ποσότητα",
+  "recent_transactions": "Πρόσφατες συναλλαγές",
+  "recent_transactions_since": "Πρόσφατες συναλλαγές από τότε",
+  "recipient": "Παραλήπτης",
+  "recipient_address": "Διεύθυνση παραλήπτη",
+  "recipient_id": "Αναγνωριστικό παραλήπτη",
+  "recipient_no_public_key": "Ο λογαριασμός παραλήπτη δεν έχει δημόσιο κλειδί, που σημαίνει ότι δεν είχε ποτέ εξερχόμενη συναλλαγή Ο λογαριασμός έχει υπόλοιπο __burst__ Signa. Ελέγξτε ξανά τη διεύθυνση παραλήπτη πριν την υποβολή.",
+  "recipients": "Παραλήπτες",
+  "record": "Ρεκόρ",
+  "referenced_transaction_full_hash": "Αναφερόμενη συναλλαγή Full Hash",
+  "refund": "Επιστροφή χρημάτων",
+  "refunded": "Επιστροφή χρημάτων",
+  "register": "Κανω ΕΓΓΡΑΦΗ",
+  "register_alias": "Εγγραφή Ψευδώνυμο",
+  "repeat": "Επαναλαμβάνω",
+  "request_burst": "Ζητήστε Signa",
+  "request_processing_time": "Ζητήστε χρόνο επεξεργασίας",
+  "reset_recipients": "Επαναφορά παραληπτών",
+  "reward_recipient": "Παραλήπτης ανταμοιβής",
+  "same_out": "Ιδιο ποσό",
+  "scoop_num": "Αριθμός κουταλιών",
+  "search": "Αναζήτηση",
+  "search_or_start_message": "Αναζήτηση ή έναρξη νέου μηνύματος",
+  "secure": "Ασφαλής",
+  "seed_password_generator": "Μετακινήστε τον κέρσορα γύρω για να δημιουργήσετε τη γεννήτρια τυχαίων αριθμών και δημιουργήστε μια ασφαλή φράση πρόσβασης.",
+  "select_node": "Επιλέξτε Κόμβος",
+  "select_node_description": "Επιλέξτε τον ομότιμο με τον οποίο θέλετε να συνδεθείτε. Μπορείτε να χρησιμοποιήσετε έναν προτεινόμενο ομότιμο, αλλά μπορείτε επίσης να εισαγάγετε ένα αυθαίρετο ομότιμο url.",
+  "select_recipients": "Επιλέξτε παραλήπτες",
+  "sell": "Πουλώ",
+  "semicolon": "Ανω τελεία",
+  "send": "Στείλετε",
+  "send_burst": "Αποστολή Signa",
+  "sender": "Αποστολέας",
+  "sender_address": "Διεύθυνση αποστολέα",
+  "sender_id": "ταυτότητα αποστολέα",
+  "sender_public_key": "Δημόσιο κλειδί αποστολέα",
+  "set_account_info": "Ορισμός πληροφοριών λογαριασμού",
+  "set_reward_recipient": "Ορισμός παραλήπτη ανταμοιβής",
+  "settings": "Ρυθμίσεις",
+  "signature": "Υπογραφή",
+  "signature_hash": "Υπογραφή Hash",
+  "smart_contract": "Έξυπνη σύμβαση",
+  "smart_contract_creation": "Έξυπνη δημιουργία συμβολαίου",
+  "smart_contract_payment": "Πληρωμή συμβολαίου",
+  "spend_all": "Περάστε όλα",
+  "standard_fee": "Πρότυπο",
+  "state": "κατάσταση",
+  "status": "Κατάσταση",
+  "submit": "υποβάλλουν",
+  "subscriptions": "Συνδρομές",
+  "subtype": "Υποτύπος",
+  "success_alias_register": "Ο ψευδώνυμος εγγράφηκε με επιτυχία.",
+  "success_clipboard_copy": "Αντιγράφηκε με επιτυχία στο πρόχειρο.",
+  "success_send_money": "Το Signa έχει σταλεί.",
+  "success_set_account_info": "Οι πληροφορίες του λογαριασμού σας αποθηκεύτηκαν με επιτυχία.",
+  "success_set_reward_recipient": "Ο παραλήπτης επιβράβευσης έχει οριστεί με επιτυχία!",
+  "suggested_fee": "Προτεινόμενα τέλη",
+  "tabulator": "Πινακοποιητής",
+  "time": "χρόνος",
+  "timestamp": "Χρονική σήμανση",
+  "title": "Τίτλος",
+  "to": "Προς την",
+  "token": "Ενδειξη",
+  "total": "Σύνολο",
+  "total_amount": "Συνολικό ποσό",
+  "total_fee": "Συνολικό τέλος",
+  "transaction": "Συναλλαγή",
+  "transaction_details": "Λεπτομέρειες Συναλλαγής",
+  "transaction_id": "Ταυτότητα συναλλαγής",
+  "transactions": "Συναλλαγές",
+  "transfer": "ΜΕΤΑΦΟΡΑ",
+  "try_again": "Προσπάθησε ξανά",
+  "type": "Τύπος",
+  "unknown": "Αγνωστος",
+  "unknown_recipients": "Εντοπίστηκαν άγνωστοι παραλήπτες",
+  "unknown_recipients_text": "Δεν ήταν δυνατή η επικύρωση των ακόλουθων παραληπτών:",
+  "unknown_version": "Άγνωστη έκδοση",
+  "update": "Εκσυγχρονίζω",
+  "update_available": "Διατίθεται νέα ενημέρωση",
+  "update_burst_account": "Εισαγωγή υπάρχοντος λογαριασμού",
+  "update_check": "Ελεγχος ενημέρωσης",
+  "update_up_to_date": "Έχετε ήδη την τελευταία έκδοση. Δεν υπάρχει ανάγκη ενημέρωσης.",
+  "uploaded": "Μεταφορτώθηκε",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Εγκυρος",
+  "valid_thru": "Εγκυρο μέχρι",
+  "validate": "Επικυρώνω",
+  "validating_node": "Επικύρωση ...",
+  "verified_source": "Επαληθευμένη και ασφαλής πηγή",
+  "verify": "Επαληθεύω",
+  "version": "Εκδοχή",
+  "volume_24h": "Τόμος 24 ώρες",
+  "vote": "Ψήφος",
+  "vote_casting": "Ψηφοφορία",
+  "warning": "Προειδοποίηση",
+  "watch_burst_account": "Παρατηρήστε λογαριασμό",
+  "wrong_pin": "Λάθος PIN",
+  "yes": "Ναί",
+  "yesterdays_change": "Αλλαγή της τελευταίας 24 ώρας",
+  "you": "Εσείς",
+  "you_sent_burst": "Στείλατε τη Signa",
+  "your_address": "Η διεύθυνση σου",
+  "your_name": "Το όνομα σου",
+  "your_passphrase": "Η φράση πρόσβασής σας",
+  "youve_got_burst": "Έχεις το Signa!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Ορίστε τη δέσμευση",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Ανάκληση δέσμευσης",
+  "reward_recipient_assignment": "Ανάθεση επιβράβευσης",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Ενημερώθηκε με επιτυχία η δέσμευσή σας για εξόρυξη",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Επιλεγμένος κόμβος",
+  "toggle_nodeselection_mode": "Εναλλαγή για εναλλαγή μεταξύ χειροκίνητης ή αυτόματης επιλογής κόμβων",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "εαυτός"
 }
