--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -178,7 +178,7 @@
   "error_refund_already_sent": "Refund already sent.",
   "error_send_money": "An unknown error occured! Signa may or may not be sent.",
   "error_server_connect": "Could not connect to server.",
-  "error_set_reward_recipient": "An unknown error occured! Your reward recipient has not been set.",
+  "error_set_reward_recipient": "An unknown error occured! You could not join the pool.",
   "error_transaction_already_signed": "Transaction already signed.",
   "error_transaction_not_signed": "Transaction is not signed yet.",
   "error_unknown": "An unknown error occured.",
@@ -304,7 +304,7 @@
   "request_burst": "Request Signa",
   "request_processing_time": "Request Processing Time",
   "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
+  "reward_recipient": "Pool Address",
   "same_out": "Same Amount",
   "scoop_num": "Scoop Number",
   "search": "Search",
@@ -323,7 +323,7 @@
   "sender_id": "Sender ID",
   "sender_public_key": "Sender Public Key",
   "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
+  "set_reward_recipient": "Join Pool",
   "settings": "Settings",
   "signature": "Signature",
   "signature_hash": "Signature Hash",
@@ -341,7 +341,7 @@
   "success_clipboard_copy": "Copied to the clipboard successfully.",
   "success_send_money": "Signa has been sent.",
   "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
+  "success_set_reward_recipient": "You joined the pool successfully!",
   "suggested_fee": "Suggested fees",
   "tabulator": "Tabulator",
   "time": "Time",
@@ -397,13 +397,13 @@
   "set_commitment": "Set Commitment",
   "add_commitment": "Add Commitment",
   "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "reward_recipient_assignment": "Join Pool",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
   "success_set_commitment": "Successfully updated your mining commitment",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
-  "no_reward_recipient": "You have no reward recipient set yet",
+  "no_reward_recipient": "No pool joined yet",
   "commitment_unsupported": "The currently selected Node does not support Mining Commitment. Please select a Node with at least Version 3+.",
   "copy_account_address_extended": "Copy Extended Address",
   "copy_account_publickey": "Copy Public Key",
