--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Cuenta",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
+  "passphrase": "Frase de contraseña",
+  "paste_csv_content": "Pegue el contenido CSV aquí",
+  "payload": "Carga útil",
+  "payload_hash": "Hash de carga útil",
+  "payload_length": "Longitud de la carga útil",
+  "payment": "Pago",
+  "payments": "Pagos",
+  "peer": "Mirar",
+  "peers": "Compañeros",
+  "pending": "Pendiente",
+  "percentage": "Porcentaje",
+  "pin_hint": "El PIN se utiliza para verificar las acciones realizadas con su cuenta. Puede ser un valor alfanumérico corto que sea fácil de memorizar. Si olvida su PIN, simplemente puede volver a crear su cuenta utilizando la frase de contraseña generada previamente.",
+  "platform": "Plataforma",
+  "poll_creation": "Creación de encuestas",
+  "previous_block": "Bloque anterior",
+  "previous_block_hash": "Hash de bloque anterior",
+  "price": "Precio",
+  "price_chart_7d": "Tabla de precios 7 días",
+  "priority_fee": "Prioridad",
+  "product": "Producto",
+  "public_key": "Llave pública",
+  "purchase": "Compra",
+  "qr_code": "Código QR",
+  "qr_code_data": "Datos del código QR",
+  "quantity": "Cantidad",
+  "recent_transactions": "Transacciones Recientes",
+  "recent_transactions_since": "Transacciones recientes desde",
+  "recipient": "Recipiente",
+  "recipient_address": "Dirección del receptor",
+  "recipient_id": "ID de destinatario",
+  "recipient_no_public_key": "La cuenta del destinatario no tiene una clave pública, lo que significa que nunca ha tenido una transacción saliente. La cuenta tiene un saldo de __burst__ Signa. Verifique la dirección de su destinatario antes de enviar.",
+  "recipients": "Destinatarios",
+  "record": "Registro",
+  "referenced_transaction_full_hash": "Hash completo de transacción referenciada",
+  "refund": "Reembolso",
+  "refunded": "Reintegrado",
+  "register": "Registrarse",
+  "register_alias": "Registrar alias",
+  "repeat": "Repetir",
+  "request_burst": "Solicitar Signa",
+  "request_processing_time": "Solicitar tiempo de procesamiento",
+  "reset_recipients": "Restablecer destinatarios",
+  "reward_recipient": "Destinatario de la recompensa",
+  "same_out": "Misma cantidad",
+  "scoop_num": "Número de cucharada",
+  "search": "Buscar",
+  "search_or_start_message": "Buscar o iniciar un mensaje nuevo",
+  "secure": "Seguro",
+  "seed_password_generator": "Mueva el cursor para sembrar el generador de números aleatorios y crear una frase de contraseña segura.",
+  "select_node": "Seleccionar nodo",
+  "select_node_description": "Seleccione el par al que desea conectarse. Puede usar un par sugerido, pero también puede ingresar una URL de par arbitraria.",
+  "select_recipients": "Seleccionar destinatarios",
+  "sell": "Vender",
+  "semicolon": "Punto y coma",
+  "send": "Enviar",
+  "send_burst": "Enviar Signa",
+  "sender": "Remitente",
+  "sender_address": "Dirección del remitente",
+  "sender_id": "identificación del remitente",
+  "sender_public_key": "Clave pública del remitente",
+  "set_account_info": "Establecer información de cuenta",
+  "set_reward_recipient": "Establecer destinatario de la recompensa",
+  "settings": "Ajustes",
+  "signature": "Firma",
+  "signature_hash": "Hash de firma",
+  "smart_contract": "Contrato inteligente",
+  "smart_contract_creation": "Creación de contrato inteligente",
+  "smart_contract_payment": "Pago del contrato",
+  "spend_all": "Gástalo todo",
+  "standard_fee": "Estándar",
+  "state": "Expresar",
+  "status": "Estado",
+  "submit": "Enviar",
+  "subscriptions": "Suscripciones",
+  "subtype": "Subtipo",
+  "success_alias_register": "Alias registrado correctamente.",
+  "success_clipboard_copy": "Copiado al portapapeles con éxito.",
+  "success_send_money": "Se ha enviado Signa.",
+  "success_set_account_info": "La información de su cuenta se ha guardado correctamente.",
+  "success_set_reward_recipient": "¡Su destinatario de recompensa se ha configurado correctamente!",
+  "suggested_fee": "Tarifas sugeridas",
+  "tabulator": "Tabulador",
+  "time": "Hora",
+  "timestamp": "Marca de tiempo",
+  "title": "Título",
+  "to": "A",
+  "token": "Simbólico",
   "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "total_amount": "Cantidad total",
+  "total_fee": "Costo total",
+  "transaction": "Transacción",
+  "transaction_details": "Detalles de la transacción",
+  "transaction_id": "ID de transacción",
+  "transactions": "Actas",
+  "transfer": "Transferir",
+  "try_again": "Intentar otra vez",
+  "type": "Tipo",
+  "unknown": "Desconocido",
+  "unknown_recipients": "Destinatarios desconocidos detectados",
+  "unknown_recipients_text": "Los siguientes destinatarios no se pudieron validar:",
+  "unknown_version": "Versión desconocida",
+  "update": "Actualizar",
+  "update_available": "Nueva actualización disponible",
+  "update_burst_account": "Importar cuenta existente",
+  "update_check": "Comprobación de actualización",
+  "update_up_to_date": "Ya tienes la última versión. No es necesario actualizar.",
+  "uploaded": "Subido",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Válido",
+  "valid_thru": "Válido hasta",
+  "validate": "Validar",
+  "validating_node": "Validando ...",
+  "verified_source": "Fuente verificada y segura",
+  "verify": "Verificar",
+  "version": "Versión",
+  "volume_24h": "Volumen 24h",
+  "vote": "Votar",
+  "vote_casting": "Transmisión de votos",
+  "warning": "Advertencia",
+  "watch_burst_account": "Observar cuenta",
+  "wrong_pin": "Pin erróneo",
+  "yes": "sí",
+  "yesterdays_change": "Cambio de las últimas 24 horas",
+  "you": "Tú",
+  "you_sent_burst": "Enviaste Signa",
+  "your_address": "Su dirección",
+  "your_name": "Tu nombre",
+  "your_passphrase": "Tu frase de contraseña",
+  "youve_got_burst": "¡Tienes a Signa!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Establecer compromiso",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Revocar compromiso",
+  "reward_recipient_assignment": "Asignación de recompensa",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Actualizó con éxito su compromiso de minería",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Nodo seleccionado actualmente",
+  "toggle_nodeselection_mode": "Alternar para cambiar entre selección de nodo manual o automática",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "uno mismo"
 }
