--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Tili",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
+  "passphrase": "Salasana",
+  "paste_csv_content": "Liitä CSV-sisältö tähän",
+  "payload": "Hyötykuorma",
+  "payload_hash": "Hyötykuorma",
+  "payload_length": "Hyötykuorman pituus",
+  "payment": "Maksu",
+  "payments": "Maksut",
+  "peer": "Tähyillä",
   "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "pending": "Odottaa",
+  "percentage": "Prosenttiosuus",
+  "pin_hint": "PIN-koodia käytetään tililläsi tehtyjen toimintojen tarkistamiseen. Se voi olla lyhyt aakkosnumeerinen arvo, joka on helppo muistaa. Jos unohdat PIN-koodisi, voit yksinkertaisesti luoda tilisi uudelleen käyttämällä aiemmin luotua salasanaa.",
+  "platform": "Alusta",
+  "poll_creation": "Kyselyn luominen",
+  "previous_block": "Edellinen lohko",
+  "previous_block_hash": "Edellinen Block Hash",
+  "price": "Hinta",
+  "price_chart_7d": "Hintakaavio 7 päivää",
+  "priority_fee": "Prioriteetti",
+  "product": "Tuote",
+  "public_key": "Julkinen avain",
+  "purchase": "Ostaa",
+  "qr_code": "QR koodi",
+  "qr_code_data": "QR-kooditiedot",
+  "quantity": "Määrä",
+  "recent_transactions": "Viimeaikaiset liiketoimet",
+  "recent_transactions_since": "Viimeaikaiset liiketoimet vuodesta",
+  "recipient": "Vastaanottaja",
+  "recipient_address": "Vastaanottajan osoite",
+  "recipient_id": "Vastaanottajan tunnus",
+  "recipient_no_public_key": "Vastaanottajan tilillä ei ole julkista avainta, joten sillä ei ole koskaan ollut lähtevää tapahtumaa. Tilillä on __burst__ Signa -saldo. Tarkista vastaanottajan osoite ennen lähettämistä.",
+  "recipients": "Vastaanottajat",
+  "record": "Ennätys",
+  "referenced_transaction_full_hash": "Viitattu tapahtuman täysi hajautus",
+  "refund": "Maksun palautus",
+  "refunded": "Palautettu",
+  "register": "Rekisteröidy",
+  "register_alias": "Rekisteröi Alias",
+  "repeat": "Toistaa",
+  "request_burst": "Pyydä Signa",
+  "request_processing_time": "Pyydä käsittelyaikaa",
+  "reset_recipients": "Nollaa vastaanottajat",
+  "reward_recipient": "Palkitse vastaanottaja",
+  "same_out": "Sama määrä",
+  "scoop_num": "Kauhan numero",
+  "search": "Hae",
+  "search_or_start_message": "Etsi tai aloita uusi viesti",
+  "secure": "Suojattu",
+  "seed_password_generator": "Siirrä kohdistinta ympäri satunnaislukugeneraattorin siementämiseksi ja luo turvallinen salasana.",
+  "select_node": "Valitse Solmu",
+  "select_node_description": "Valitse vertaisverkko, johon haluat muodostaa yhteyden. Voit käyttää ehdotettua vertaisversiota, mutta voit myös kirjoittaa mielivaltaisen vertaisverkko-osoitteen.",
+  "select_recipients": "Valitse Vastaanottajat",
+  "sell": "Myydä",
+  "semicolon": "Puolipiste",
+  "send": "Lähettää",
+  "send_burst": "Lähetä Signa",
+  "sender": "Lähettäjä",
+  "sender_address": "Lähettäjän osoite",
+  "sender_id": "lähettäjän ID",
+  "sender_public_key": "Lähettäjän julkinen avain",
+  "set_account_info": "Aseta tilitiedot",
+  "set_reward_recipient": "Aseta Palkkion vastaanottaja",
+  "settings": "asetukset",
+  "signature": "Allekirjoitus",
+  "signature_hash": "Allekirjoitus Hash",
+  "smart_contract": "Älykäs sopimus",
+  "smart_contract_creation": "Älykäs sopimusten luominen",
+  "smart_contract_payment": "Sopimuksen maksu",
+  "spend_all": "Käytä kaikki",
+  "standard_fee": "Vakio",
+  "state": "Osavaltio",
+  "status": "Tila",
+  "submit": "Lähetä",
+  "subscriptions": "Tilaukset",
+  "subtype": "Alatyyppi",
+  "success_alias_register": "Alias rekisteröinti onnistui.",
+  "success_clipboard_copy": "Kopiointi leikepöydälle onnistui.",
+  "success_send_money": "Signa on lähetetty.",
+  "success_set_account_info": "Tilisi tiedot on tallennettu.",
+  "success_set_reward_recipient": "Palkinnon saajasi on asetettu onnistuneesti!",
+  "suggested_fee": "Ehdotetut maksut",
+  "tabulator": "Taulukko",
+  "time": "Aika",
+  "timestamp": "Aikaleima",
+  "title": "Otsikko",
+  "to": "Vastaanottaja",
+  "token": "Tunnus",
+  "total": "Kaikki yhteensä",
+  "total_amount": "Kokonaismäärä",
+  "total_fee": "Kokonaismaksu",
+  "transaction": "Kauppa",
+  "transaction_details": "maksutapahtuman tiedot",
+  "transaction_id": "Tapahtuman tunnus",
+  "transactions": "Tapahtumat",
+  "transfer": "Siirtää",
+  "try_again": "Yritä uudelleen",
+  "type": "Tyyppi",
+  "unknown": "Tuntematon",
+  "unknown_recipients": "Tuntemattomat vastaanottajat havaittu",
+  "unknown_recipients_text": "Seuraavia vastaanottajia ei voitu vahvistaa:",
+  "unknown_version": "Versio tuntematon",
+  "update": "Päivittää",
+  "update_available": "Uusi päivitys saatavilla",
+  "update_burst_account": "Tuo olemassa oleva tili",
+  "update_check": "Päivitystarkistus",
+  "update_up_to_date": "Sinulla on jo uusin julkaisu. Ei tarvitse päivittää.",
+  "uploaded": "Ladattu",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Pätevä",
+  "valid_thru": "Voimassa jonnekin asti",
+  "validate": "Vahvista",
+  "validating_node": "Vahvistetaan ...",
+  "verified_source": "Vahvistettu ja suojattu lähde",
+  "verify": "Vahvista",
+  "version": "Versio",
+  "volume_24h": "Äänenvoimakkuus 24h",
+  "vote": "Äänestys",
+  "vote_casting": "Äänestys",
+  "warning": "Varoitus",
+  "watch_burst_account": "Tarkkaile tiliä",
+  "wrong_pin": "Väärä PIN-koodi",
+  "yes": "Joo",
+  "yesterdays_change": "Viimeisen 24 tunnin muutos",
+  "you": "Sinä",
+  "you_sent_burst": "Lähetit Signan",
+  "your_address": "Osoitteesi",
+  "your_name": "Sinun nimesi",
+  "your_passphrase": "Salasanasi",
+  "youve_got_burst": "Sinulla on Signa!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Aseta sitoutuminen",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Peruuta sitoumus",
+  "reward_recipient_assignment": "Palkintotehtävä",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Kaivos sitoutuminen päivitetty onnistuneesti",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Tällä hetkellä valittu solmu",
+  "toggle_nodeselection_mode": "Vaihda vaihtaaksesi manuaalisen tai automaattisen solmuvalinnan välillä",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "itse"
 }
