--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Compte",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
+  "passphrase": "Phrase secrète",
+  "paste_csv_content": "Collez le contenu CSV ici",
+  "payload": "Charge utile",
+  "payload_hash": "Hachage de charge utile",
+  "payload_length": "Longueur de la charge utile",
+  "payment": "Paiement",
+  "payments": "Paiements",
+  "peer": "Pair",
+  "peers": "Pairs",
+  "pending": "En attente",
+  "percentage": "Pourcentage",
+  "pin_hint": "Le code PIN est utilisé pour vérifier les actions effectuées avec votre compte. Il peut s'agir d'une courte valeur alphanumérique facile à mémoriser. Si vous oubliez votre code PIN, vous pouvez simplement recréer votre compte en utilisant la phrase secrète précédemment générée.",
+  "platform": "Plate-forme",
+  "poll_creation": "Création de sondage",
+  "previous_block": "Bloc précédent",
+  "previous_block_hash": "Bloquer le hachage précédent",
+  "price": "Prix",
+  "price_chart_7d": "Tableau des prix 7 jours",
+  "priority_fee": "Priorité",
+  "product": "Produit",
+  "public_key": "Clé publique",
+  "purchase": "Acheter",
   "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
+  "qr_code_data": "Données de code QR",
+  "quantity": "Quantité",
+  "recent_transactions": "transactions récentes",
+  "recent_transactions_since": "Transactions récentes depuis",
+  "recipient": "Destinataire",
+  "recipient_address": "Adresse du destinataire",
+  "recipient_id": "Identifiant du destinataire",
+  "recipient_no_public_key": "Le compte destinataire n'a pas de clé publique, ce qui signifie qu'il n'a jamais eu de transaction sortante. Le compte a un solde de __burst__ Signa. Veuillez vérifier votre adresse de destinataire avant de soumettre.",
+  "recipients": "Destinataires",
+  "record": "Enregistrer",
+  "referenced_transaction_full_hash": "Hash complet de la transaction référencée",
+  "refund": "Remboursement",
+  "refunded": "Remboursé",
+  "register": "S'inscrire",
+  "register_alias": "Enregistrer un alias",
+  "repeat": "Répéter",
+  "request_burst": "Demander Signa",
+  "request_processing_time": "Délai de traitement de la demande",
+  "reset_recipients": "Réinitialiser les destinataires",
+  "reward_recipient": "Bénéficiaire de la récompense",
+  "same_out": "Même quantité",
+  "scoop_num": "Numéro de cuillère",
+  "search": "Rechercher",
+  "search_or_start_message": "Rechercher ou commencer un nouveau message",
+  "secure": "Sécurise",
+  "seed_password_generator": "Déplacez votre curseur pour amorcer le générateur de nombres aléatoires et créer une phrase secrète sécurisée.",
+  "select_node": "Sélectionnez le nœud",
+  "select_node_description": "Sélectionnez le pair auquel vous souhaitez vous connecter. Vous pouvez utiliser un pair suggéré, mais vous pouvez également entrer une URL de pair arbitraire.",
+  "select_recipients": "Sélectionnez les destinataires",
+  "sell": "Vendre",
+  "semicolon": "Point-virgule",
+  "send": "Envoyer",
+  "send_burst": "Envoyer Signa",
+  "sender": "Expéditeur",
+  "sender_address": "Adresse de l'expéditeur",
+  "sender_id": "Identifiant de l'expéditeur",
+  "sender_public_key": "Clé publique de l'expéditeur",
+  "set_account_info": "Définir les informations du compte",
+  "set_reward_recipient": "Définir le destinataire de la récompense",
+  "settings": "Paramètres",
   "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
+  "signature_hash": "Hachage de signature",
+  "smart_contract": "Contrat intelligent",
+  "smart_contract_creation": "Création de contrat intelligent",
+  "smart_contract_payment": "Paiement du contrat",
+  "spend_all": "Tout dépenser",
   "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
+  "state": "État",
+  "status": "Statut",
+  "submit": "Soumettre",
+  "subscriptions": "Abonnements",
+  "subtype": "Sous-type",
+  "success_alias_register": "Alias enregistré avec succès.",
+  "success_clipboard_copy": "Copié dans le presse-papiers avec succès.",
+  "success_send_money": "Signa a été envoyé.",
+  "success_set_account_info": "Vos informations de compte ont été enregistrées avec succès.",
+  "success_set_reward_recipient": "Le destinataire de votre récompense a été défini avec succès !",
+  "suggested_fee": "Frais suggérés",
+  "tabulator": "Tabulatrice",
+  "time": "Temps",
+  "timestamp": "Horodatage",
+  "title": "Titre",
+  "to": "À",
+  "token": "Jeton",
+  "total": "Le total",
+  "total_amount": "Montant total",
+  "total_fee": "Montant total",
   "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
+  "transaction_details": "détails de la transaction",
+  "transaction_id": "identifiant de transaction",
   "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "transfer": "Transfert",
+  "try_again": "Réessayer",
+  "type": "Taper",
+  "unknown": "Inconnu",
+  "unknown_recipients": "Destinataires inconnus détectés",
+  "unknown_recipients_text": "Le ou les destinataires suivants n'ont pas pu être validés :",
+  "unknown_version": "Version inconnue",
+  "update": "Mettre à jour",
+  "update_available": "Nouvelle mise à jour disponible",
+  "update_burst_account": "Importer un compte existant",
+  "update_check": "Vérification de la mise à jour",
+  "update_up_to_date": "Vous avez déjà la dernière version. Il n'est pas nécessaire de mettre à jour.",
+  "uploaded": "Téléchargé",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
+  "valid": "Valide",
+  "valid_thru": "Valide jusqu'au",
+  "validate": "Valider",
+  "validating_node": "Validation...",
+  "verified_source": "Source vérifiée et sécurisée",
+  "verify": "Vérifier",
   "version": "Version",
   "volume_24h": "Volume 24h",
   "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "vote_casting": "Vote",
+  "warning": "Avertissement",
+  "watch_burst_account": "Observer le compte",
+  "wrong_pin": "NIP erroné",
+  "yes": "Oui",
+  "yesterdays_change": "Changement des dernières 24 heures",
+  "you": "Toi",
+  "you_sent_burst": "Vous avez envoyé Signa",
+  "your_address": "Votre adresse",
+  "your_name": "votre nom",
+  "your_passphrase": "Votre mot de passe",
+  "youve_got_burst": "Vous avez Signa !",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Définir l'engagement",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Révoquer l'engagement",
+  "reward_recipient_assignment": "Attribution de récompense",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Mise à jour réussie de votre engagement minier",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Nœud actuellement sélectionné",
+  "toggle_nodeselection_mode": "Basculer pour basculer entre la sélection de nœud manuelle ou automatique",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "soi"
 }
