--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Conta",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
+  "passphrase": "Frase de acceso",
+  "paste_csv_content": "Pega o contido CSV aquí",
+  "payload": "Carga útil",
+  "payload_hash": "Hash de carga útil",
+  "payload_length": "Lonxitude da carga útil",
+  "payment": "Pagamento",
+  "payments": "Pagamentos",
+  "peer": "Igual",
+  "peers": "Compañeiros",
+  "pending": "Pendente",
+  "percentage": "Porcentaxe",
+  "pin_hint": "O PIN úsase para verificar as accións realizadas coa súa conta. Pode ser un valor alfanumérico curto e fácil de memorizar. Se esquece o seu PIN, pode recrear a súa conta usando a frase de acceso xerada previamente.",
+  "platform": "Plataforma",
+  "poll_creation": "Creación de enquisas",
+  "previous_block": "Bloque anterior",
+  "previous_block_hash": "Bloque Hash anterior",
+  "price": "Prezo",
+  "price_chart_7d": "Gráfico de prezos 7 días",
+  "priority_fee": "Prioridade",
+  "product": "Produto",
+  "public_key": "Clave pública",
+  "purchase": "Compra",
+  "qr_code": "Código QR",
+  "qr_code_data": "Datos de código QR",
+  "quantity": "Cantidade",
+  "recent_transactions": "Transaccións recentes",
+  "recent_transactions_since": "Transaccións recentes desde entón",
+  "recipient": "Recipiente",
+  "recipient_address": "Enderezo do destinatario",
+  "recipient_id": "ID do destinatario",
+  "recipient_no_public_key": "A conta do destinatario non ten unha clave pública, o que significa que nunca tivo unha transacción de saída. A conta ten un saldo de __burst__ Signa. Comprobe o seu enderezo de destinatario antes de enviar.",
+  "recipients": "Destinatarios",
+  "record": "Rexistro",
+  "referenced_transaction_full_hash": "Transacción referenciada Full Hash",
+  "refund": "Reembolso",
+  "refunded": "Reembolsado",
+  "register": "Rexistrarse",
+  "register_alias": "Rexistrar alias",
+  "repeat": "Repita",
+  "request_burst": "Solicitude Signa",
+  "request_processing_time": "Tempo de tramitación da solicitude",
+  "reset_recipients": "Restablecer destinatarios",
+  "reward_recipient": "Destinatario da recompensa",
+  "same_out": "Igual cantidade",
+  "scoop_num": "Número de Scoop",
+  "search": "Buscar",
+  "search_or_start_message": "Busca ou inicia unha nova mensaxe",
+  "secure": "Seguro",
+  "seed_password_generator": "Move o cursor para sementar o xerador de números aleatorios e crea unha frase de acceso segura.",
+  "select_node": "Seleccione Nodo",
+  "select_node_description": "Selecciona o compañeiro co que queres conectarte. Pode empregar un par suxerido, pero tamén pode introducir unha URL de par arbitraria.",
+  "select_recipients": "Selecciona Destinatarios",
+  "sell": "Vender",
+  "semicolon": "Punto e coma",
+  "send": "Enviar",
+  "send_burst": "Enviar Signa",
+  "sender": "Remitente",
+  "sender_address": "Enderezo do remitente",
+  "sender_id": "ID do remitente",
+  "sender_public_key": "Clave pública remitente",
+  "set_account_info": "Establecer información da conta",
+  "set_reward_recipient": "Establecer destinatario da recompensa",
+  "settings": "Configuración",
+  "signature": "Sinatura",
+  "signature_hash": "Sinatura Hash",
+  "smart_contract": "Contrato intelixente",
+  "smart_contract_creation": "Creación de contratos intelixentes",
+  "smart_contract_payment": "Pagamento do contrato",
+  "spend_all": "Gasta todo",
+  "standard_fee": "Estándar",
+  "state": "Estado",
+  "status": "Estado",
+  "submit": "Enviar",
+  "subscriptions": "Subscricións",
+  "subtype": "Subtipo",
+  "success_alias_register": "Alias rexistrouse correctamente.",
+  "success_clipboard_copy": "Copiouse ao portapapeis con éxito.",
+  "success_send_money": "Enviouse Signa.",
+  "success_set_account_info": "A información da túa conta gardouse correctamente.",
+  "success_set_reward_recipient": "O seu destinatario da recompensa configurouse correctamente.",
+  "suggested_fee": "Taxas suxeridas",
+  "tabulator": "Tabulador",
+  "time": "Tempo",
+  "timestamp": "Marca de tempo",
+  "title": "Título",
+  "to": "Para",
   "token": "Token",
   "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "total_amount": "Cantidade total",
+  "total_fee": "Taxa total",
+  "transaction": "Transacción",
+  "transaction_details": "Detalles da transacción",
+  "transaction_id": "ID de transacción",
+  "transactions": "Transaccións",
+  "transfer": "Transferir",
+  "try_again": "Téntao de novo",
+  "type": "Tipo",
+  "unknown": "Descoñecido",
+  "unknown_recipients": "Detectáronse destinatarios descoñecidos",
+  "unknown_recipients_text": "Non se puideron validar os seguintes destinatarios:",
+  "unknown_version": "Versión descoñecida",
+  "update": "Actualización",
+  "update_available": "Nova actualización dispoñible",
+  "update_burst_account": "Importar conta existente",
+  "update_check": "Actualización de verificación",
+  "update_up_to_date": "Xa tes a última versión. Non fai falta actualizar.",
+  "uploaded": "Cargado",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
+  "valid": "Válido",
+  "valid_thru": "Válido ata",
+  "validate": "Validar",
+  "validating_node": "Validando ...",
+  "verified_source": "Fonte verificada e segura",
+  "verify": "Verificar",
+  "version": "Versión",
   "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "vote": "Vota",
+  "vote_casting": "Reparto de votos",
+  "warning": "Aviso",
+  "watch_burst_account": "Observe a conta",
+  "wrong_pin": "PIN incorrecto",
+  "yes": "Si",
+  "yesterdays_change": "Cambio das últimas 24 horas",
+  "you": "Ti",
+  "you_sent_burst": "Enviaches a Signa",
+  "your_address": "O seu enderezo",
+  "your_name": "O teu nome",
+  "your_passphrase": "A túa frase de acceso",
+  "youve_got_burst": "Tes Signa!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Establecer compromiso",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Revocar o compromiso",
+  "reward_recipient_assignment": "Asignación de recompensas",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Actualizou correctamente o seu compromiso coa minería",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Nodo seleccionado actualmente",
+  "toggle_nodeselection_mode": "Alternar para cambiar entre a selección de nodos manual ou automática",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "eu"
 }
