--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "लेखा",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
-  "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "passphrase": "पदबंध",
+  "paste_csv_content": "सीएसवी सामग्री यहां पेस्ट करें",
+  "payload": "पेलोड",
+  "payload_hash": "पेलोड हैश",
+  "payload_length": "पेलोड लंबाई",
+  "payment": "भुगतान",
+  "payments": "भुगतान",
+  "peer": "पीयर",
+  "peers": "साथियों",
+  "pending": "विचाराधीन",
+  "percentage": "प्रतिशत",
+  "pin_hint": "पिन का उपयोग आपके खाते के साथ की गई कार्रवाइयों को सत्यापित करने के लिए किया जाता है। यह एक छोटा अक्षरांकीय मान हो सकता है जिसे याद रखना आसान हो। यदि आप अपना पिन भूल जाते हैं तो आप पहले से जेनरेट किए गए पासफ़्रेज़ का उपयोग करके अपना खाता फिर से बना सकते हैं।",
+  "platform": "मंच",
+  "poll_creation": "मतदान निर्माण",
+  "previous_block": "पिछला ब्लॉक",
+  "previous_block_hash": "पिछला ब्लॉक हैश",
+  "price": "कीमत",
+  "price_chart_7d": "मूल्य चार्ट 7 दिन",
+  "priority_fee": "वरीयता",
+  "product": "उत्पाद",
+  "public_key": "सार्वजनिक कुंजी",
+  "purchase": "खरीद फरोख्त",
+  "qr_code": "क्यूआर कोड",
+  "qr_code_data": "क्यूआर कोड डेटा",
+  "quantity": "मात्रा",
+  "recent_transactions": "हाल ही के लेनदेन",
+  "recent_transactions_since": "हाल के लेन-देन के बाद से",
+  "recipient": "प्राप्त करने वाला",
+  "recipient_address": "प्राप्तकर्ता का पता",
+  "recipient_id": "प्राप्तकर्ता आईडी",
+  "recipient_no_public_key": "प्राप्तकर्ता खाते में सार्वजनिक कुंजी नहीं होती है, जिसका अर्थ है कि इसका कभी भी आउटगोइंग लेनदेन नहीं हुआ है। खाते में __burst__ सिग्ना की शेष राशि है। सबमिट करने से पहले कृपया अपने प्राप्तकर्ता के पते की दोबारा जांच करें।",
+  "recipients": "प्राप्तकर्ताओं",
+  "record": "अभिलेख",
+  "referenced_transaction_full_hash": "संदर्भित लेनदेन पूर्ण हैश",
+  "refund": "धन की वापसी",
+  "refunded": "वापसी की गई है",
+  "register": "रजिस्टर करें",
+  "register_alias": "उपनाम पंजीकृत करें",
+  "repeat": "दोहराना",
+  "request_burst": "सिग्ना का अनुरोध करें",
+  "request_processing_time": "अनुरोध प्रसंस्करण समय",
+  "reset_recipients": "प्राप्तकर्ता रीसेट करें",
+  "reward_recipient": "पुरस्कार प्राप्तकर्ता",
+  "same_out": "समान राशि",
+  "scoop_num": "स्कूप नंबर",
+  "search": "खोज",
+  "search_or_start_message": "नया संदेश खोजें या प्रारंभ करें",
+  "secure": "सुरक्षित",
+  "seed_password_generator": "यादृच्छिक संख्या जनरेटर को सीड करने और एक सुरक्षित पासफ़्रेज़ बनाने के लिए अपने कर्सर को इधर-उधर घुमाएँ।",
+  "select_node": "नोड का चयन करें",
+  "select_node_description": "उस सहकर्मी का चयन करें जिससे आप कनेक्ट करना चाहते हैं। आप सुझाए गए पीयर का उपयोग कर सकते हैं, लेकिन एक मनमाना पीयर यूआरएल भी दर्ज कर सकते हैं।",
+  "select_recipients": "प्राप्तकर्ताओं का चयन करें",
+  "sell": "बेचना",
+  "semicolon": "सेमीकोलन",
+  "send": "संदेश",
+  "send_burst": "सिग्ना भेजें",
+  "sender": "प्रेषक",
+  "sender_address": "भेजने वाले का पता",
+  "sender_id": "प्रेषक आईडी",
+  "sender_public_key": "प्रेषक सार्वजनिक कुंजी",
+  "set_account_info": "खाता जानकारी सेट करें",
+  "set_reward_recipient": "इनाम प्राप्तकर्ता सेट करें",
+  "settings": "समायोजन",
+  "signature": "हस्ताक्षर",
+  "signature_hash": "सिग्नेचर हैश",
+  "smart_contract": "स्मार्ट अनुबंध",
+  "smart_contract_creation": "स्मार्ट अनुबंध निर्माण",
+  "smart_contract_payment": "अनुबंध भुगतान",
+  "spend_all": "सब खर्च कर दो",
+  "standard_fee": "मानक",
+  "state": "राज्य",
+  "status": "स्थिति",
+  "submit": "प्रस्तुत",
+  "subscriptions": "सदस्यता",
+  "subtype": "उप-प्रकार",
+  "success_alias_register": "उपनाम सफलतापूर्वक पंजीकृत किया गया।",
+  "success_clipboard_copy": "क्लिपबोर्ड पर सफलतापूर्वक कॉपी किया गया।",
+  "success_send_money": "साइना भेज दिया गया है।",
+  "success_set_account_info": "आपकी खाता जानकारी सफलतापूर्वक सहेज ली गई है।",
+  "success_set_reward_recipient": "आपका इनाम प्राप्तकर्ता सफलतापूर्वक सेट कर दिया गया है!",
+  "suggested_fee": "सुझाई गई फीस",
+  "tabulator": "टैबुलाटर",
+  "time": "समय",
+  "timestamp": "समय-चिह्न",
+  "title": "शीर्षक",
+  "to": "सेवा",
+  "token": "टोकन",
+  "total": "संपूर्ण",
+  "total_amount": "कुल राशि",
+  "total_fee": "कुल शुल्क",
+  "transaction": "लेन-देन",
+  "transaction_details": "लेनदेन का विवरण",
+  "transaction_id": "लेन-देन आईडी",
+  "transactions": "लेनदेन",
+  "transfer": "स्थानांतरण",
+  "try_again": "पुनः प्रयास करें",
+  "type": "प्रकार",
+  "unknown": "अनजान",
+  "unknown_recipients": "अज्ञात प्राप्तकर्ता पाए गए",
+  "unknown_recipients_text": "निम्नलिखित प्राप्तकर्ता (प्राप्तकर्ताओं) को सत्यापित नहीं किया जा सका:",
+  "unknown_version": "संस्करण अज्ञात",
+  "update": "अपडेट करें",
+  "update_available": "नई सूचना उपलब्ध है",
+  "update_burst_account": "मौजूदा खाता आयात करें",
+  "update_check": "अद्यतन की जाँच करें",
+  "update_up_to_date": "आपके पास पहले से ही नवीनतम रिलीज़ है। अद्यतन करने की कोई आवश्यकता नहीं है।",
+  "uploaded": "अपलोड किए गए",
+  "uri": "यूआरआई",
+  "valid": "वैध",
+  "valid_thru": "तक वैध",
+  "validate": "मान्य",
+  "validating_node": "मान्य किया जा रहा है...",
+  "verified_source": "सत्यापित और सुरक्षित स्रोत",
+  "verify": "सत्यापित करें",
+  "version": "संस्करण",
+  "volume_24h": "वॉल्यूम 24h",
+  "vote": "वोट",
+  "vote_casting": "वोट कास्टिंग",
+  "warning": "चेतावनी",
+  "watch_burst_account": "खाते का निरीक्षण करें",
+  "wrong_pin": "गलत पिन",
+  "yes": "हाँ",
+  "yesterdays_change": "पिछले 24 घंटे का परिवर्तन",
+  "you": "आप",
+  "you_sent_burst": "आपने सिग्ना भेजा",
+  "your_address": "तुम्हारा पता",
+  "your_name": "तुम्हारा नाम",
+  "your_passphrase": "आपका पासफ़्रेज़",
+  "youve_got_burst": "आपके पास सिग्ना है!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "प्रतिबद्धता सेट करें",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "प्रतिबद्धता रद्द करें",
+  "reward_recipient_assignment": "इनाम असाइनमेंट",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "आपकी खनन प्रतिबद्धता को सफलतापूर्वक अपडेट किया गया",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "वर्तमान में चयनित नोड",
+  "toggle_nodeselection_mode": "मैन्युअल या स्वचालित नोड चयन के बीच स्विच करने के लिए टॉगल करें",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "स्वयं"
 }
