--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Akun",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
+  "passphrase": "Frasa sandi",
+  "paste_csv_content": "Tempel konten CSV di sini",
+  "payload": "Muatan",
   "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
+  "payload_length": "Panjang Muatan",
+  "payment": "Pembayaran",
+  "payments": "Pembayaran",
+  "peer": "rekan",
+  "peers": "teman sebaya",
+  "pending": "Tertunda",
+  "percentage": "Persentase",
+  "pin_hint": "PIN digunakan untuk memverifikasi tindakan yang dilakukan dengan akun Anda. Ini bisa berupa nilai alfanumerik pendek yang mudah dihafal. Jika Anda lupa PIN Anda, Anda cukup membuat ulang akun Anda menggunakan frasa sandi yang dibuat sebelumnya.",
+  "platform": "Peron",
+  "poll_creation": "Pembuatan Jajak Pendapat",
+  "previous_block": "Blok Sebelumnya",
+  "previous_block_hash": "Blok Hash Sebelumnya",
+  "price": "Harga",
+  "price_chart_7d": "Bagan Harga 7 hari",
+  "priority_fee": "Prioritas",
+  "product": "Produk",
+  "public_key": "Kunci Publik",
+  "purchase": "Membeli",
+  "qr_code": "Kode QR",
+  "qr_code_data": "Data Kode QR",
+  "quantity": "Kuantitas",
+  "recent_transactions": "transaksi terkini",
+  "recent_transactions_since": "Transaksi terakhir sejak",
+  "recipient": "Penerima",
+  "recipient_address": "Alamat penerima",
+  "recipient_id": "ID penerima",
+  "recipient_no_public_key": "Akun penerima tidak memiliki kunci publik, artinya tidak pernah melakukan transaksi keluar. Akun memiliki saldo __burst__ Signa. Harap periksa kembali alamat penerima Anda sebelum mengirimkan.",
+  "recipients": "Penerima",
+  "record": "Merekam",
+  "referenced_transaction_full_hash": "Transaksi yang Direferensikan Hash Penuh",
+  "refund": "Pengembalian dana",
+  "refunded": "Dikembalikan",
+  "register": "Daftar",
+  "register_alias": "Daftar Alias",
+  "repeat": "Ulang",
+  "request_burst": "Minta Tanda",
+  "request_processing_time": "Permintaan Waktu Pemrosesan",
+  "reset_recipients": "Atur Ulang Penerima Re",
+  "reward_recipient": "Penerima Hadiah",
+  "same_out": "Sama banyak",
+  "scoop_num": "Nomor Sendok",
+  "search": "Cari",
+  "search_or_start_message": "Cari atau mulai pesan baru",
+  "secure": "Aman",
+  "seed_password_generator": "Gerakkan kursor Anda untuk menyemai generator nomor acak dan membuat frasa sandi yang aman.",
+  "select_node": "Pilih Node",
+  "select_node_description": "Pilih rekan yang ingin Anda hubungkan. Anda dapat menggunakan rekan yang disarankan, tetapi juga dapat memasukkan url rekan sewenang-wenang.",
+  "select_recipients": "Pilih Penerima",
+  "sell": "Menjual",
+  "semicolon": "Titik koma",
+  "send": "Kirim",
+  "send_burst": "Kirim Tanda",
+  "sender": "Pengirim",
+  "sender_address": "Alamat pengirim",
+  "sender_id": "ID pengirim",
+  "sender_public_key": "Kunci Publik Pengirim",
+  "set_account_info": "Setel Info Akun",
+  "set_reward_recipient": "Tetapkan Penerima Hadiah",
+  "settings": "Pengaturan",
+  "signature": "Tanda tangan",
+  "signature_hash": "Tanda Tangan Hash",
+  "smart_contract": "Kontrak Cerdas",
+  "smart_contract_creation": "Pembuatan Kontrak Cerdas",
+  "smart_contract_payment": "Pembayaran Kontrak",
+  "spend_all": "Habiskan semua",
+  "standard_fee": "Standar",
+  "state": "Negara",
   "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
+  "submit": "Kirimkan",
+  "subscriptions": "Langganan",
+  "subtype": "Subtipe",
+  "success_alias_register": "Alias berhasil didaftarkan.",
+  "success_clipboard_copy": "Berhasil disalin ke papan klip.",
+  "success_send_money": "Signa telah dikirim.",
+  "success_set_account_info": "Info akun Anda telah berhasil disimpan.",
+  "success_set_reward_recipient": "Penerima hadiah Anda telah berhasil ditetapkan!",
+  "suggested_fee": "Biaya yang disarankan",
   "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
+  "time": "Waktu",
+  "timestamp": "stempel waktu",
+  "title": "Judul",
+  "to": "Untuk",
   "token": "Token",
   "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
+  "total_amount": "Jumlah total",
+  "total_fee": "Total Biaya",
+  "transaction": "Transaksi",
+  "transaction_details": "Detil transaksi",
+  "transaction_id": "ID transaksi",
+  "transactions": "Transaksi",
   "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "try_again": "Coba lagi",
+  "type": "Tipe",
+  "unknown": "Tidak diketahui",
+  "unknown_recipients": "Penerima Tidak Dikenal Terdeteksi",
+  "unknown_recipients_text": "Penerima berikut tidak dapat divalidasi:",
+  "unknown_version": "Versi tidak diketahui",
+  "update": "Memperbarui",
+  "update_available": "Pembaruan baru tersedia",
+  "update_burst_account": "Impor akun yang ada",
+  "update_check": "Perbarui Periksa",
+  "update_up_to_date": "Anda sudah memiliki rilis terbaru. Tidak perlu memperbarui.",
+  "uploaded": "Diunggah",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Sah",
+  "valid_thru": "Berlaku sampai",
+  "validate": "Mengesahkan",
+  "validating_node": "Memvalidasi...",
+  "verified_source": "Sumber terverifikasi dan aman",
+  "verify": "Memeriksa",
+  "version": "Versi: kapan",
+  "volume_24h": "Volume 24 jam",
+  "vote": "Pilih",
+  "vote_casting": "Pemungutan Suara",
+  "warning": "Peringatan",
+  "watch_burst_account": "Perhatikan Akun",
+  "wrong_pin": "PIN salah",
+  "yes": "Iya",
+  "yesterdays_change": "Perubahan 24 Jam Terakhir",
+  "you": "Kamu",
+  "you_sent_burst": "Anda mengirim Signa",
+  "your_address": "Alamat Anda",
+  "your_name": "Namamu",
+  "your_passphrase": "Frasa Sandi Anda",
+  "youve_got_burst": "Anda punya Signa!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Tetapkan Komitmen",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Cabut Komitmen",
+  "reward_recipient_assignment": "Tugas Hadiah",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Berhasil memperbarui komitmen penambangan Anda",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Node yang dipilih saat ini",
+  "toggle_nodeselection_mode": "Beralih untuk beralih antara pemilihan simpul manual atau otomatis",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "diri"
 }
