--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "account",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
+  "passphrase": "Frase d'accesso",
+  "paste_csv_content": "Incolla qui il contenuto CSV",
+  "payload": "Carico utile",
+  "payload_hash": "Hash del carico utile",
+  "payload_length": "Lunghezza del carico utile",
+  "payment": "Pagamento",
+  "payments": "Pagamenti",
+  "peer": "pari",
+  "peers": "Colleghi",
+  "pending": "in attesa di",
+  "percentage": "Percentuale",
+  "pin_hint": "Il PIN viene utilizzato per verificare le azioni effettuate con il tuo account. Può essere un breve valore alfanumerico facile da memorizzare. Se dimentichi il PIN, puoi semplicemente ricreare il tuo account utilizzando la passphrase generata in precedenza.",
+  "platform": "piattaforma",
+  "poll_creation": "Creazione sondaggio Poll",
+  "previous_block": "Blocco precedente",
+  "previous_block_hash": "Blocco precedente Hash",
+  "price": "Prezzo",
+  "price_chart_7d": "Grafico dei prezzi 7 giorni",
+  "priority_fee": "Priorità",
+  "product": "Prodotto",
+  "public_key": "Chiave pubblica",
+  "purchase": "Acquista",
   "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
+  "qr_code_data": "Dati del codice QR",
+  "quantity": "Quantità",
+  "recent_transactions": "Le transazioni recenti",
+  "recent_transactions_since": "Transazioni recenti da",
+  "recipient": "Destinatario",
+  "recipient_address": "Indirizzo del destinatario",
+  "recipient_id": "ID destinatario",
+  "recipient_no_public_key": "L'account del destinatario non ha una chiave pubblica, il che significa che non ha mai avuto una transazione in uscita. Il conto ha un saldo di __burst__ Signa. Si prega di ricontrollare l'indirizzo del destinatario prima di inviare.",
+  "recipients": "Destinatari",
+  "record": "Disco",
+  "referenced_transaction_full_hash": "Hash completo transazione referenziata",
+  "refund": "Rimborso",
+  "refunded": "Rimborsato",
+  "register": "Registrati",
+  "register_alias": "Registrati Alias",
+  "repeat": "Ripetere",
+  "request_burst": "Richiesta di firma",
+  "request_processing_time": "Tempo di elaborazione della richiesta",
+  "reset_recipients": "Reimposta destinatari",
+  "reward_recipient": "Destinatario del premio",
+  "same_out": "La stessa quantità",
+  "scoop_num": "Numero di paletta",
+  "search": "Ricerca",
+  "search_or_start_message": "Cerca o inizia un nuovo messaggio",
+  "secure": "Sicuro",
+  "seed_password_generator": "Muovi il cursore per eseguire il seeding del generatore di numeri casuali e creare una passphrase sicura.",
+  "select_node": "Seleziona nodo",
+  "select_node_description": "Seleziona il peer a cui vuoi connetterti. Puoi utilizzare un peer suggerito, ma puoi anche inserire un URL peer arbitrario.",
+  "select_recipients": "Seleziona Destinatari",
+  "sell": "Vendere",
+  "semicolon": "Punto e virgola",
+  "send": "Spedire",
+  "send_burst": "Invia firma",
+  "sender": "Mittente",
+  "sender_address": "Indirizzo del mittente",
+  "sender_id": "identità del mittente",
+  "sender_public_key": "Chiave pubblica del mittente",
+  "set_account_info": "Imposta informazioni sull'account",
+  "set_reward_recipient": "Imposta il destinatario del premio",
+  "settings": "impostazioni",
+  "signature": "Firma",
+  "signature_hash": "Hash firma",
+  "smart_contract": "Contratto intelligente",
+  "smart_contract_creation": "Creazione di contratti intelligenti",
+  "smart_contract_payment": "Pagamento del contratto",
+  "spend_all": "Spendi tutto",
   "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
+  "state": "Stato",
+  "status": "Stato",
+  "submit": "Invia",
+  "subscriptions": "Abbonamenti",
+  "subtype": "sottotipo",
+  "success_alias_register": "Alias registrato con successo.",
+  "success_clipboard_copy": "Copiato negli appunti con successo.",
+  "success_send_money": "Signa è stato inviato.",
+  "success_set_account_info": "Le informazioni del tuo account sono state salvate con successo.",
+  "success_set_reward_recipient": "Il destinatario del tuo premio è stato impostato con successo!",
+  "suggested_fee": "Tariffe suggerite",
+  "tabulator": "tabulatore",
+  "time": "Tempo",
   "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "title": "Titolo",
+  "to": "Per",
+  "token": "Gettone",
+  "total": "Totale",
+  "total_amount": "Importo totale",
+  "total_fee": "Commissione totale",
+  "transaction": "Transazione",
+  "transaction_details": "Dettagli di Transazione",
+  "transaction_id": "ID transazione",
+  "transactions": "Transazioni",
+  "transfer": "Trasferimento",
+  "try_again": "Riprova",
+  "type": "genere",
+  "unknown": "Sconosciuto",
+  "unknown_recipients": "Rilevati destinatari sconosciuti",
+  "unknown_recipients_text": "Non è stato possibile convalidare i seguenti destinatari:",
+  "unknown_version": "Versione sconosciuta",
+  "update": "Aggiornare",
+  "update_available": "Nuovo aggiornamento disponibile",
+  "update_burst_account": "Importa account esistente",
+  "update_check": "Verifica aggiornamenti",
+  "update_up_to_date": "Hai già l'ultima versione. Non è necessario aggiornare.",
+  "uploaded": "Caricato",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
+  "valid": "Valido",
+  "valid_thru": "Valido fino al",
+  "validate": "Convalidare",
+  "validating_node": "Convalida in corso...",
+  "verified_source": "Fonte verificata e sicura",
+  "verify": "Verificare",
+  "version": "Versione",
   "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "vote": "Votazione",
+  "vote_casting": "Vota Casting",
+  "warning": "avvertimento",
+  "watch_burst_account": "Osserva conto",
+  "wrong_pin": "PIN errato",
+  "yes": "sì",
+  "yesterdays_change": "Cambio delle ultime 24 ore",
+  "you": "voi",
+  "you_sent_burst": "Hai mandato Signa",
+  "your_address": "Il tuo indirizzo",
+  "your_name": "Il tuo nome",
+  "your_passphrase": "La tua passphrase",
+  "youve_got_burst": "Hai Signa!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Imposta impegno",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Revoca impegno",
+  "reward_recipient_assignment": "Assegnazione del premio",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Aggiornato con successo il tuo impegno di mining",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Nodo attualmente selezionato",
+  "toggle_nodeselection_mode": "Attiva/disattiva per passare dalla selezione del nodo manuale a quella automatica",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "se stesso"
 }
