--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "アカウント",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "passphrase": "パスフレーズ",
+  "paste_csv_content": "ここにCSVコンテンツを貼り付けます",
+  "payload": "ペイロード",
+  "payload_hash": "ペイロードハッシュ",
+  "payload_length": "ペイロードの長さ",
+  "payment": "支払い",
+  "payments": "支払い",
+  "peer": "ピア",
+  "peers": "ピア",
+  "pending": "保留中",
+  "percentage": "パーセンテージ",
+  "pin_hint": "PIN は、アカウントで行われたアクションを確認するために使用されます。覚えやすい短い英数字を使用できます。 PIN を忘れた場合は、以前に生成したパスフレーズを使用してアカウントを再作成できます。",
+  "platform": "プラットホーム",
+  "poll_creation": "投票の作成",
+  "previous_block": "前のブロック",
+  "previous_block_hash": "前のブロック ハッシュ",
+  "price": "価格",
+  "price_chart_7d": "価格表 7日",
+  "priority_fee": "優先",
+  "product": "製品",
+  "public_key": "公開鍵",
+  "purchase": "購入",
+  "qr_code": "QRコード",
+  "qr_code_data": "QRコードデータ",
+  "quantity": "量",
+  "recent_transactions": "最近の取引",
+  "recent_transactions_since": "以降の最近の取引",
+  "recipient": "受取人",
+  "recipient_address": "受取人の住所",
+  "recipient_id": "受信者ID",
+  "recipient_no_public_key": "受信者のアカウントには公開鍵がありません。つまり、発信トランザクションは一度もありません。アカウントの残高は __burst__ Signa です。送信する前に、受信者のアドレスをもう一度確認してください。",
+  "recipients": "受信者",
+  "record": "記録",
+  "referenced_transaction_full_hash": "参照されるトランザクションのフルハッシュ",
+  "refund": "返金",
+  "refunded": "返金された",
+  "register": "登録",
+  "register_alias": "エイリアスを登録する",
+  "repeat": "繰り返す",
+  "request_burst": "シグナをリクエスト",
+  "request_processing_time": "リクエスト処理時間",
+  "reset_recipients": "受信者をリセット",
+  "reward_recipient": "報酬の受取人",
+  "same_out": "同額",
+  "scoop_num": "スクープ番号",
+  "search": "探す",
+  "search_or_start_message": "新しいメッセージを検索または開始",
+  "secure": "安全",
+  "seed_password_generator": "カーソルを動かして乱数ジェネレーターをシードし、安全なパスフレーズを作成します。",
+  "select_node": "ノードを選択",
+  "select_node_description": "接続するピアを選択します。提案されたピアを使用できますが、任意のピア URL を入力することもできます。",
+  "select_recipients": "受信者を選択",
+  "sell": "売る",
+  "semicolon": "セミコロン",
+  "send": "送信する",
+  "send_burst": "シグナを送る",
+  "sender": "差出人",
+  "sender_address": "差出人住所",
+  "sender_id": "送信者ID",
+  "sender_public_key": "送信者の公開鍵",
+  "set_account_info": "アカウント情報の設定",
+  "set_reward_recipient": "報酬受取人を設定",
+  "settings": "設定",
+  "signature": "署名",
+  "signature_hash": "署名ハッシュ",
+  "smart_contract": "スマートコントラクト",
+  "smart_contract_creation": "スマートコントラクトの作成",
+  "smart_contract_payment": "契約支払",
+  "spend_all": "すべてを費やす",
+  "standard_fee": "標準",
+  "state": "状態",
+  "status": "状態",
+  "submit": "参加する",
+  "subscriptions": "購読",
+  "subtype": "サブタイプ",
+  "success_alias_register": "エイリアスが正常に登録されました。",
+  "success_clipboard_copy": "クリップボードに正常にコピーされました。",
+  "success_send_money": "シグナが送信されました。",
+  "success_set_account_info": "アカウント情報が正常に保存されました。",
+  "success_set_reward_recipient": "報酬の受取人が設定されました。",
+  "suggested_fee": "推奨料金",
+  "tabulator": "タブ",
+  "time": "時間",
+  "timestamp": "タイムスタンプ",
+  "title": "題名",
+  "to": "に",
+  "token": "トークン",
+  "total": "合計",
+  "total_amount": "合計金額",
+  "total_fee": "合計料金",
+  "transaction": "トランザクション",
+  "transaction_details": "取引明細",
+  "transaction_id": "取引ID",
+  "transactions": "取引",
+  "transfer": "転送",
+  "try_again": "再試行する",
+  "type": "タイプ",
+  "unknown": "わからない",
+  "unknown_recipients": "不明な受信者が検出されました",
+  "unknown_recipients_text": "次の受信者を検証できませんでした:",
+  "unknown_version": "バージョン不明",
+  "update": "更新",
+  "update_available": "新しいアップデートが利用可能",
+  "update_burst_account": "既存のアカウントをインポート",
+  "update_check": "更新チェック",
+  "update_up_to_date": "すでに最新のリリースがあります。アップデートの必要はありません。",
+  "uploaded": "アップロード済み",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "有効",
+  "valid_thru": "Thru有効な",
+  "validate": "検証",
+  "validating_node": "検証しています...",
+  "verified_source": "検証済みの安全なソース",
+  "verify": "確認",
+  "version": "バージョン",
+  "volume_24h": "ボリューム24時間",
+  "vote": "投票",
+  "vote_casting": "投票キャスティング",
+  "warning": "警告",
+  "watch_burst_account": "アカウントを監視",
+  "wrong_pin": "間違った PIN",
+  "yes": "はい",
+  "yesterdays_change": "過去 24 時間の変化",
+  "you": "君は",
+  "you_sent_burst": "シグナを送った",
+  "your_address": "あなたの住所",
+  "your_name": "あなたの名前",
+  "your_passphrase": "あなたのパスフレーズ",
+  "youve_got_burst": "シグナがいる！",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "コミットメントを設定する",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "コミットメントを取り消す",
+  "reward_recipient_assignment": "報酬の割り当て",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "マイニング コミットメントを正常に更新しました",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "現在選択されているノード",
+  "toggle_nodeselection_mode": "手動または自動ノード選択を切り替えるトグル",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "自己"
 }
