--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Sąskaita",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "passphrase": "Slaptafrazė",
+  "paste_csv_content": "Čia įklijuokite CSV turinį",
+  "payload": "Naudingoji apkrova",
+  "payload_hash": "Naudingoji apkrova Hash",
+  "payload_length": "Naudingosios apkrovos ilgis",
+  "payment": "Apmokėjimas",
+  "payments": "Mokėjimai",
+  "peer": "Bendraamžiai",
+  "peers": "Bendraamžiai",
+  "pending": "Kol",
+  "percentage": "Procentai",
+  "pin_hint": "PIN naudojamas patikrinant su jūsų paskyra atliktus veiksmus. Tai gali būti trumpa raidinė ir skaitinė vertė, kurią lengva įsiminti. Jei pamiršite PIN kodą, galite paprasčiausiai atkurti savo sąskaitą naudodami anksčiau sugeneruotą slaptafrazę.",
+  "platform": "Platforma",
+  "poll_creation": "Apklausos kūrimas",
+  "previous_block": "Ankstesnis blokas",
+  "previous_block_hash": "Ankstesnis „Block Hash“",
+  "price": "Kaina",
+  "price_chart_7d": "Kainų diagrama 7 dienos",
+  "priority_fee": "Prioritetas",
+  "product": "Produktas",
+  "public_key": "Viešasis raktas",
+  "purchase": "Pirkimas",
+  "qr_code": "QR kodas",
+  "qr_code_data": "QR kodo duomenys",
+  "quantity": "Kiekis",
+  "recent_transactions": "Naujausios operacijos",
+  "recent_transactions_since": "Naujausi sandoriai nuo",
+  "recipient": "Gavėjas",
+  "recipient_address": "Gavėjo adresas",
+  "recipient_id": "Gavėjo ID",
+  "recipient_no_public_key": "Gavėjo sąskaita neturi viešojo rakto, tai reiškia, kad ji niekada neturėjo išeinančių operacijų. Sąskaitos likutis __burst__ Signa. Prieš pateikdami, dar kartą patikrinkite savo gavėjo adresą.",
+  "recipients": "Gavėjai",
+  "record": "Įrašyti",
+  "referenced_transaction_full_hash": "Nurodytas visas sandoris",
+  "refund": "Grąžinti pinigus",
+  "refunded": "Grąžinta",
+  "register": "Registruotis",
+  "register_alias": "Užregistruokite slapyvardį",
+  "repeat": "Pakartokite",
+  "request_burst": "Prašyti Signos",
+  "request_processing_time": "Užklausos apdorojimo laikas",
+  "reset_recipients": "Iš naujo nustatyti gavėjus",
+  "reward_recipient": "Apdovanojimo gavėjas",
+  "same_out": "Ta pati suma",
+  "scoop_num": "Samtelio numeris",
+  "search": "Paieška",
+  "search_or_start_message": "Ieškokite arba pradėkite naują pranešimą",
+  "secure": "Saugus",
+  "seed_password_generator": "Perkelkite žymeklį, kad sukurtumėte atsitiktinių skaičių generatorių ir sukurtumėte saugią slaptafrazę.",
+  "select_node": "Pasirinkite mazgas",
+  "select_node_description": "Pasirinkite bendraamį, prie kurio norite prisijungti. Galite naudoti siūlomą bendraamžį, bet galite įvesti ir savavališką bendraamžių URL.",
+  "select_recipients": "Pasirinkite gavėjai",
+  "sell": "Parduoti",
+  "semicolon": "Kabliataškis",
+  "send": "Siųsti",
+  "send_burst": "Siųskite Signą",
+  "sender": "Siuntėjas",
+  "sender_address": "Siuntėjo adresas",
+  "sender_id": "siuntėjo ID",
+  "sender_public_key": "Siuntėjo viešasis raktas",
+  "set_account_info": "Nustatyti sąskaitos informaciją",
+  "set_reward_recipient": "Nustatyti atlygio gavėją",
+  "settings": "Nustatymai",
+  "signature": "Parašas",
+  "signature_hash": "Parašas Hash",
+  "smart_contract": "Protinga sutartis",
+  "smart_contract_creation": "Protingas sutarčių kūrimas",
+  "smart_contract_payment": "Sutarties apmokėjimas",
+  "spend_all": "Išleisk viską",
+  "standard_fee": "Standartinis",
+  "state": "Valstija",
+  "status": "Būsena",
+  "submit": "Pateikti",
+  "subscriptions": "Prenumeratos",
+  "subtype": "Potipis",
+  "success_alias_register": "Pseudonimas sėkmingai užregistruotas.",
+  "success_clipboard_copy": "Sėkmingai nukopijuota į mainų sritį.",
+  "success_send_money": "Signa išsiųsta.",
+  "success_set_account_info": "Jūsų paskyros informacija sėkmingai išsaugota.",
+  "success_set_reward_recipient": "Jūsų premijos gavėjas sėkmingai nustatytas!",
+  "suggested_fee": "Siūlomi mokesčiai",
+  "tabulator": "Lentelė",
+  "time": "Laikas",
+  "timestamp": "Laiko žymė",
+  "title": "Pavadinimas",
+  "to": "Į",
+  "token": "Žetonas",
+  "total": "Iš viso",
+  "total_amount": "Visas kiekis",
+  "total_fee": "Bendras mokestis",
+  "transaction": "Sandoris",
+  "transaction_details": "Pervedimo duomenys",
+  "transaction_id": "Operacijos ID",
+  "transactions": "Sandoriai",
+  "transfer": "Perkėlimas",
+  "try_again": "Bandyk iš naujo",
+  "type": "Tipas",
+  "unknown": "Nežinoma",
+  "unknown_recipients": "Aptikti nežinomi gavėjai",
+  "unknown_recipients_text": "Nepavyko patvirtinti šio (-ių) gavėjo (-ų):",
+  "unknown_version": "Versija nežinoma",
+  "update": "Atnaujinti",
+  "update_available": "Galimas naujas atnaujinimas",
+  "update_burst_account": "Importuoti esamą paskyrą",
+  "update_check": "Atnaujinti čekį",
+  "update_up_to_date": "Jau turite naujausią leidimą. Atnaujinti nereikia.",
+  "uploaded": "Įkelta",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Galioja",
+  "valid_thru": "Galioja per",
+  "validate": "Patvirtinti",
+  "validating_node": "Tvirtinama ...",
+  "verified_source": "Patvirtintas ir saugus šaltinis",
+  "verify": "Patikrinkite",
+  "version": "Versija",
+  "volume_24h": "Tomas 24 val",
+  "vote": "Balsas",
+  "vote_casting": "Balsavimo perdavimas",
+  "warning": "Įspėjimas",
+  "watch_burst_account": "Stebėti sąskaitą",
+  "wrong_pin": "Neteisingas PIN kodas",
+  "yes": "Taip",
+  "yesterdays_change": "Paskutinės 24 valandų permainos",
+  "you": "Tu",
+  "you_sent_burst": "Jūs išsiuntėte Signą",
+  "your_address": "Jūsų adresas",
+  "your_name": "Tavo vardas",
+  "your_passphrase": "Jūsų slaptafrazė",
+  "youve_got_burst": "Jūs turite Signą!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Nustatykite įsipareigojimą",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Atšaukti įsipareigojimą",
+  "reward_recipient_assignment": "Atlygio paskyrimas",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Sėkmingai atnaujinote įsipareigojimą kasybos srityje",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Šiuo metu pasirinktas mazgas",
+  "toggle_nodeselection_mode": "Perjunkite, jei norite perjungti rankinį ar automatinį mazgų pasirinkimą",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "savarankiškai"
 }
