--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
+  "passphrase": "Wachtwoordzin",
+  "paste_csv_content": "Plak hier de CSV-inhoud",
+  "payload": "Laadvermogen",
+  "payload_hash": "Payload hash",
+  "payload_length": "Lengte laadvermogen",
+  "payment": "Betaling",
+  "payments": "Betalingen",
+  "peer": "peer",
+  "peers": "leeftijdsgenoten",
+  "pending": "In afwachting",
   "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
+  "pin_hint": "De pincode wordt gebruikt om acties met uw account te verifiëren. Het kan een korte alfanumerieke waarde zijn die gemakkelijk te onthouden is. Als u uw pincode bent vergeten, kunt u eenvoudig uw account opnieuw maken met behulp van de eerder gegenereerde wachtwoordzin.",
   "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
+  "poll_creation": "Opiniepeiling maken",
+  "previous_block": "Vorig blok",
+  "previous_block_hash": "Vorige Block Hash",
+  "price": "Prijs",
+  "price_chart_7d": "Prijsgrafiek 7 dagen",
+  "priority_fee": "Prioriteit",
   "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
+  "public_key": "Publieke sleutel",
+  "purchase": "Aankoop",
+  "qr_code": "QR code",
+  "qr_code_data": "QR-codegegevens",
+  "quantity": "Aantal stuks",
+  "recent_transactions": "recente transacties",
+  "recent_transactions_since": "Recente transacties sinds",
+  "recipient": "Ontvanger",
+  "recipient_address": "Adres ontvanger",
+  "recipient_id": "Ontvanger-ID",
+  "recipient_no_public_key": "De rekening van de ontvanger heeft geen openbare sleutel, wat betekent dat er nooit een uitgaande transactie is geweest. Het account heeft een saldo van __burst__ Signa. Controleer het adres van uw ontvanger voordat u deze verzendt.",
+  "recipients": "Ontvangers",
+  "record": "Vermelding",
+  "referenced_transaction_full_hash": "Transactie waarnaar verwezen wordt Volledige hash",
+  "refund": "Terugbetaling",
+  "refunded": "Terugbetaald",
+  "register": "Registreren",
+  "register_alias": "Alias registreren",
+  "repeat": "Herhaling",
+  "request_burst": "Signa aanvragen",
+  "request_processing_time": "Verwerkingstijd aanvragen",
+  "reset_recipients": "Ontvangers resetten",
+  "reward_recipient": "Ontvanger van beloning",
+  "same_out": "Zelfde hoeveelheid",
+  "scoop_num": "Scoop nummer",
+  "search": "Zoeken",
+  "search_or_start_message": "Zoek of start een nieuw bericht",
+  "secure": "veilig",
+  "seed_password_generator": "Beweeg uw cursor rond om de generator voor willekeurige getallen te seeden en een veilige wachtwoordzin te maken.",
+  "select_node": "Selecteer Knooppunt",
+  "select_node_description": "Selecteer de peer waarmee u verbinding wilt maken. U kunt een voorgestelde peer gebruiken, maar u kunt ook een willekeurige peer-url invoeren.",
+  "select_recipients": "Selecteer ontvangers",
+  "sell": "Verkopen",
+  "semicolon": "Puntkomma",
+  "send": "Sturen",
+  "send_burst": "Signaal verzenden",
+  "sender": "Afzender",
+  "sender_address": "Zender adres",
+  "sender_id": "zender ID",
+  "sender_public_key": "Openbare sleutel afzender",
+  "set_account_info": "Accountgegevens instellen",
+  "set_reward_recipient": "Ontvanger van beloning instellen",
+  "settings": "Instellingen",
+  "signature": "Handtekening",
+  "signature_hash": "Handtekening Hash",
+  "smart_contract": "Slim contract",
+  "smart_contract_creation": "Slimme contractcreatie",
+  "smart_contract_payment": "Contractbetaling",
+  "spend_all": "Geef alles uit",
+  "standard_fee": "Standaard",
+  "state": "Staat",
+  "status": "Toestand",
+  "submit": "Verzenden",
+  "subscriptions": "Abonnementen",
   "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
+  "success_alias_register": "Alias succesvol geregistreerd.",
+  "success_clipboard_copy": "Succesvol naar het klembord gekopieerd.",
+  "success_send_money": "Signa is verzonden.",
+  "success_set_account_info": "Uw accountgegevens zijn succesvol opgeslagen.",
+  "success_set_reward_recipient": "De ontvanger van je beloning is succesvol ingesteld!",
+  "suggested_fee": "Voorgestelde kosten",
   "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
+  "time": "Tijd",
+  "timestamp": "Tijdstempel",
+  "title": "Titel",
+  "to": "Naar",
+  "token": "token",
+  "total": "Totaal",
+  "total_amount": "Totale hoeveelheid",
+  "total_fee": "Totale vergoeding",
+  "transaction": "Transactie",
+  "transaction_details": "transactie details",
+  "transaction_id": "Transactie ID",
+  "transactions": "Transacties",
+  "transfer": "Overdracht",
+  "try_again": "Probeer het opnieuw",
   "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
+  "unknown": "Onbekend",
+  "unknown_recipients": "Onbekende ontvangers gedetecteerd",
+  "unknown_recipients_text": "De volgende ontvanger(s) konden niet worden gevalideerd:",
+  "unknown_version": "Versie onbekend",
+  "update": "Bijwerken",
+  "update_available": "Nieuwe update beschikbaar",
+  "update_burst_account": "Bestaand account importeren",
   "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "update_up_to_date": "Je hebt de laatste release al. Het is niet nodig om te updaten.",
+  "uploaded": "Geüpload",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Geldig",
+  "valid_thru": "Geldig t/m",
+  "validate": "Valideren",
+  "validating_node": "Valideren...",
+  "verified_source": "Geverifieerde en veilige bron",
+  "verify": "Verifiëren",
+  "version": "Versie",
+  "volume_24h": "Volume 24u",
+  "vote": "Stemmen",
+  "vote_casting": "Stem uitbrengen",
+  "warning": "Waarschuwing",
+  "watch_burst_account": "Bekijk account",
+  "wrong_pin": "Verkeerde pincode",
+  "yes": "Ja",
+  "yesterdays_change": "Verandering van afgelopen 24 uur",
+  "you": "U",
+  "you_sent_burst": "Je stuurde Signa",
+  "your_address": "Jouw adres",
+  "your_name": "Uw naam",
+  "your_passphrase": "Uw wachtwoordzin",
+  "youve_got_burst": "Je hebt Signa!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Verbintenis instellen",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Verbintenis intrekken",
+  "reward_recipient_assignment": "Beloningsopdracht",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Uw mijntoezegging met succes bijgewerkt",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Momenteel geselecteerde node",
+  "toggle_nodeselection_mode": "Schakelen tussen handmatige of automatische knooppuntselectie",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "zelf"
 }
