--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Konto",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
+  "passphrase": "Hasło",
+  "paste_csv_content": "Tutaj wklej zawartość CSV",
+  "payload": "Ładunek",
+  "payload_hash": "Hash ładunku Pay",
+  "payload_length": "Długość ładunku",
+  "payment": "Zapłata",
+  "payments": "Płatności",
+  "peer": "Par",
+  "peers": "rówieśnicy",
+  "pending": "W oczekiwaniu",
+  "percentage": "Odsetek",
+  "pin_hint": "Kod PIN służy do weryfikacji działań wykonywanych na Twoim koncie. Może to być krótka wartość alfanumeryczna, którą łatwo zapamiętać. Jeśli zapomnisz kodu PIN, możesz po prostu odtworzyć swoje konto, używając wcześniej wygenerowanego hasła.",
+  "platform": "Platforma",
+  "poll_creation": "Tworzenie ankiety",
+  "previous_block": "Poprzedni blok",
+  "previous_block_hash": "Poprzedni blok hasz",
+  "price": "Cena £",
+  "price_chart_7d": "Wykres cen 7 dni",
+  "priority_fee": "Priorytet",
+  "product": "Produkt",
+  "public_key": "Klucz publiczny",
+  "purchase": "Zakup",
+  "qr_code": "Kod QR",
+  "qr_code_data": "Dane kodu QR",
+  "quantity": "Ilość",
+  "recent_transactions": "ostatnie tranzakcje",
+  "recent_transactions_since": "Ostatnie transakcje od",
+  "recipient": "Odbiorca",
+  "recipient_address": "Adres odbiorcy",
+  "recipient_id": "Identyfikator odbiorcy",
+  "recipient_no_public_key": "Konto odbiorcy nie ma klucza publicznego, co oznacza, że nigdy nie miało transakcji wychodzącej. Saldo konta wynosi __burst__ Signa. Proszę dokładnie sprawdzić adres odbiorcy przed przesłaniem.",
+  "recipients": "Odbiorcy",
+  "record": "Rekord",
+  "referenced_transaction_full_hash": "Odwołana transakcja Pełny skrót",
+  "refund": "Zwrot",
+  "refunded": "Zwrócone",
+  "register": "Zarejestrować",
+  "register_alias": "Zarejestruj alias",
+  "repeat": "Powtarzać",
+  "request_burst": "Poproś o znak",
+  "request_processing_time": "Czas przetwarzania żądania",
+  "reset_recipients": "Zresetuj odbiorców",
+  "reward_recipient": "Odbiorca nagrody",
+  "same_out": "Taka sama ilość",
+  "scoop_num": "Numer miarki",
+  "search": "Szukaj",
+  "search_or_start_message": "Wyszukaj lub rozpocznij nową wiadomość",
+  "secure": "Bezpieczne",
+  "seed_password_generator": "Poruszaj kursorem, aby zainicjować generator liczb losowych i utworzyć bezpieczne hasło.",
+  "select_node": "Wybierz węzeł",
+  "select_node_description": "Wybierz peera, z którym chcesz się połączyć. Możesz użyć sugerowanego partnera, ale możesz też wprowadzić dowolny adres URL partnera.",
+  "select_recipients": "Wybierz odbiorców",
+  "sell": "Sprzedać",
+  "semicolon": "Średnik",
+  "send": "Wysłać",
+  "send_burst": "Wyślij sygnał",
+  "sender": "Nadawca",
+  "sender_address": "Adres nadawcy",
+  "sender_id": "Identyfikator nadawcy",
+  "sender_public_key": "Klucz publiczny nadawcy",
+  "set_account_info": "Ustaw informacje o koncie",
+  "set_reward_recipient": "Ustaw odbiorcę nagrody",
+  "settings": "Ustawienia",
+  "signature": "Podpis",
+  "signature_hash": "Skrót podpisu",
+  "smart_contract": "Inteligentny kontrakt",
+  "smart_contract_creation": "Tworzenie inteligentnych umów",
+  "smart_contract_payment": "Płatności kontraktowe!",
+  "spend_all": "Wydać wszystko",
   "standard_fee": "Standard",
-  "state": "State",
+  "state": "Stan",
   "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
+  "submit": "Zatwierdź",
+  "subscriptions": "Subskrypcje",
+  "subtype": "Podtyp",
+  "success_alias_register": "Alias został pomyślnie zarejestrowany.",
+  "success_clipboard_copy": "Skopiowano do schowka pomyślnie.",
+  "success_send_money": "Signa została wysłana.",
+  "success_set_account_info": "Informacje o Twoim koncie zostały pomyślnie zapisane.",
+  "success_set_reward_recipient": "Twój odbiorca nagrody został pomyślnie ustawiony!",
+  "suggested_fee": "Sugerowane opłaty",
   "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
+  "time": "Czas",
+  "timestamp": "Znak czasu",
+  "title": "Tytuł",
+  "to": "Do",
+  "token": "Znak",
+  "total": "Całkowity",
+  "total_amount": "Całkowita kwota",
+  "total_fee": "Całkowita opłata",
+  "transaction": "Transakcja",
+  "transaction_details": "szczegóły transakcji",
+  "transaction_id": "Identyfikator transakcji",
+  "transactions": "Transakcje",
   "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "try_again": "Spróbuj ponownie",
+  "type": "Rodzaj",
+  "unknown": "Nieznany",
+  "unknown_recipients": "Wykryto nieznanych odbiorców",
+  "unknown_recipients_text": "Nie można zweryfikować następujących adresatów:",
+  "unknown_version": "Wersja nieznana",
+  "update": "Aktualizacja",
+  "update_available": "Dostępna nowa aktualizacja",
+  "update_burst_account": "Importuj istniejące konto",
+  "update_check": "Sprawdź aktualizację",
+  "update_up_to_date": "Masz już najnowszą wersję. Nie ma potrzeby aktualizacji.",
+  "uploaded": "Przesłane",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Ważny",
+  "valid_thru": "Ważny do",
+  "validate": "Uprawomocnić",
+  "validating_node": "Weryfikowanie...",
+  "verified_source": "Zweryfikowane i bezpieczne źródło",
+  "verify": "Zweryfikować",
+  "version": "Wersja",
+  "volume_24h": "Głośność 24h",
+  "vote": "Głosować",
+  "vote_casting": "Głosowanie",
+  "warning": "Ostrzeżenie",
+  "watch_burst_account": "Obserwuj konto",
+  "wrong_pin": "Błędny kod PIN",
+  "yes": "tak",
+  "yesterdays_change": "Zmiana z ostatnich 24 godzin Hour",
+  "you": "ty",
+  "you_sent_burst": "Wysłałeś Signa",
+  "your_address": "Twój adres",
+  "your_name": "Twoje imię",
+  "your_passphrase": "Twoje hasło",
+  "youve_got_burst": "Masz Signę!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Ustaw zobowiązanie",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Unieważnij zobowiązanie",
+  "reward_recipient_assignment": "Przypisanie nagrody",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Pomyślnie zaktualizowałeś swoje zobowiązanie do wydobycia",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Aktualnie wybrany węzeł",
+  "toggle_nodeselection_mode": "Przełącz, aby przełączać się między ręcznym a automatycznym wyborem węzła",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "samego siebie"
 }
