--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Cont",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
+  "passphrase": "Expresie de acces",
+  "paste_csv_content": "Inserați conținutul CSV aici",
+  "payload": "Încărcătură utilă",
+  "payload_hash": "Hash de încărcare utilă",
+  "payload_length": "Lungimea sarcinii utile",
+  "payment": "Plată",
+  "payments": "Plăți",
   "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
+  "peers": "Colegii",
+  "pending": "In asteptarea",
+  "percentage": "Procent",
+  "pin_hint": "PIN-ul este utilizat pentru a verifica acțiunile efectuate cu contul dvs. Poate fi o valoare alfanumerică scurtă, ușor de memorat. Dacă uitați codul PIN, vă puteți recrea pur și simplu contul folosind fraza de acces generată anterior.",
+  "platform": "Platformă",
+  "poll_creation": "Crearea sondajului",
+  "previous_block": "Blocul anterior",
+  "previous_block_hash": "Blocare Hash anterioară",
+  "price": "Preț",
+  "price_chart_7d": "Graficul prețurilor 7 zile",
+  "priority_fee": "Prioritate",
+  "product": "Produs",
+  "public_key": "Cheie publică",
+  "purchase": "Cumpărare",
+  "qr_code": "Cod QR",
+  "qr_code_data": "Date de cod QR",
+  "quantity": "Cantitate",
+  "recent_transactions": "tranzactii recente",
+  "recent_transactions_since": "Tranzacții recente de atunci",
+  "recipient": "Destinatar",
+  "recipient_address": "Adresa destinatarului",
+  "recipient_id": "ID-ul destinatarului",
+  "recipient_no_public_key": "Contul destinatar nu are o cheie publică, ceea ce înseamnă că nu a avut niciodată o tranzacție de ieșire. Contul are un sold de __burst__ Signa. Vă rugăm să verificați din nou adresa destinatarului înainte de a trimite.",
+  "recipients": "Destinatari",
   "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
+  "referenced_transaction_full_hash": "Tranzacție completă la care se face referire",
+  "refund": "Restituire",
+  "refunded": "Rambursat",
+  "register": "Inregistreaza-te",
+  "register_alias": "Înregistrați Alias",
+  "repeat": "Repeta",
+  "request_burst": "Solicitați semnătura",
+  "request_processing_time": "Timp de procesare a solicitării",
+  "reset_recipients": "Resetați destinatarii",
+  "reward_recipient": "Recompensă Destinatar",
+  "same_out": "Aceeasi suma",
+  "scoop_num": "Număr Scoop",
+  "search": "Căutare",
+  "search_or_start_message": "Căutați sau începeți un mesaj nou",
+  "secure": "Sigur",
+  "seed_password_generator": "Deplasați cursorul pentru a însemna generatorul de numere aleatorii și pentru a crea o expresie de acces sigură.",
+  "select_node": "Selectați Nod",
+  "select_node_description": "Selectați egalul la care doriți să vă conectați. Puteți utiliza un peer sugerat, dar puteți introduce și o adresă URL peer arbitrară.",
+  "select_recipients": "Selectați Destinatari",
+  "sell": "Vinde",
+  "semicolon": "Punct şi virgulă",
+  "send": "Trimite",
+  "send_burst": "Trimite-o pe Signa",
+  "sender": "Expeditor",
+  "sender_address": "Adresa expeditorului",
+  "sender_id": "ID-ul expeditorului",
+  "sender_public_key": "Cheie publică expeditor",
+  "set_account_info": "Setați informații despre cont",
+  "set_reward_recipient": "Setați destinatarul recompensei",
+  "settings": "Setări",
+  "signature": "Semnătură",
+  "signature_hash": "Semnătura Hash",
+  "smart_contract": "Contract inteligent",
+  "smart_contract_creation": "Crearea de contracte inteligente",
+  "smart_contract_payment": "Plata contractului",
+  "spend_all": "Cheltuie totul",
   "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
+  "state": "Stat",
+  "status": "stare",
+  "submit": "Trimite",
+  "subscriptions": "Abonamente",
+  "subtype": "Subtip",
+  "success_alias_register": "Alias s-a înregistrat cu succes.",
+  "success_clipboard_copy": "Copiat în clipboard cu succes.",
+  "success_send_money": "Signa a fost trimisă.",
+  "success_set_account_info": "Informațiile contului dvs. au fost salvate cu succes.",
+  "success_set_reward_recipient": "Destinatarul recompensei dvs. a fost setat cu succes!",
+  "suggested_fee": "Taxe sugerate",
   "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
+  "time": "Timp",
+  "timestamp": "Timestamp-ul",
+  "title": "Titlu",
+  "to": "La",
+  "token": "Jeton",
   "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
+  "total_amount": "Valoare totală",
+  "total_fee": "Taxă totală",
+  "transaction": "Tranzacţie",
+  "transaction_details": "Detalii tranzacție",
+  "transaction_id": "ID-ul de tranzacție",
+  "transactions": "Tranzacții",
   "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "try_again": "Încearcă din nou",
+  "type": "Tip",
+  "unknown": "Necunoscut",
+  "unknown_recipients": "Destinatari necunoscuți detectați",
+  "unknown_recipients_text": "Următorii destinatari nu au putut fi validați:",
+  "unknown_version": "Versiune necunoscută",
+  "update": "Actualizați",
+  "update_available": "Nouă actualizare disponibilă",
+  "update_burst_account": "Importați contul existent",
+  "update_check": "Verificare de actualizare",
+  "update_up_to_date": "Aveți deja cea mai recentă versiune. Nu este nevoie să actualizați.",
+  "uploaded": "Încărcat",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Valabil",
+  "valid_thru": "Valabil prin",
+  "validate": "Valida",
+  "validating_node": "Se validează ...",
+  "verified_source": "Sursă verificată și sigură",
+  "verify": "Verifica",
+  "version": "Versiune",
+  "volume_24h": "Volumul 24h",
+  "vote": "Vot",
+  "vote_casting": "Distribuirea votului",
+  "warning": "Avertizare",
+  "watch_burst_account": "Respectați contul",
+  "wrong_pin": "Cod PIN greșit",
+  "yes": "da",
+  "yesterdays_change": "Schimbarea ultimelor 24 de ore",
+  "you": "Tu",
+  "you_sent_burst": "Ai trimis-o pe Signa",
+  "your_address": "Adresa ta",
+  "your_name": "Numele dumneavoastră",
+  "your_passphrase": "Expresia dvs. de acces",
+  "youve_got_burst": "Ai Signa!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Setați angajamentul",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Revocați angajamentul",
+  "reward_recipient_assignment": "Atribuire recompensă",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "V-ați actualizat cu succes angajamentul minier",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Nodul selectat în prezent",
+  "toggle_nodeselection_mode": "Comutați pentru a comuta între selecția manuală sau automată a nodului",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "de sine"
 }
