--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Счет",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -261,146 +261,146 @@
   "or": "or",
   "order": "Order",
   "ordinary_payment": "Payment",
-  "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "other": "Другой",
+  "passphrase": "Кодовая фраза",
+  "paste_csv_content": "Вставьте сюда содержимое CSV",
+  "payload": "Полезная нагрузка",
+  "payload_hash": "Хеш полезной нагрузки",
+  "payload_length": "Длина полезной нагрузки",
+  "payment": "Оплата",
+  "payments": "Платежи",
+  "peer": "Вглядеться",
+  "peers": "Сверстники",
+  "pending": "В ожидании",
+  "percentage": "Процент",
+  "pin_hint": "PIN-код используется для проверки действий, совершенных с вашей учетной записью. Это может быть короткое буквенно-цифровое значение, которое легко запомнить. Если вы забыли свой PIN-код, вы можете просто воссоздать свою учетную запись, используя ранее сгенерированную кодовую фразу.",
+  "platform": "Платформа",
+  "poll_creation": "Создание опроса",
+  "previous_block": "Предыдущий блок",
+  "previous_block_hash": "Хеш предыдущего блока",
+  "price": "Цена",
+  "price_chart_7d": "График цен 7 дней",
+  "priority_fee": "Приоритет",
+  "product": "Продукт",
+  "public_key": "Открытый ключ",
+  "purchase": "Покупка",
+  "qr_code": "QR код",
+  "qr_code_data": "Данные QR-кода",
+  "quantity": "Количество",
+  "recent_transactions": "Недавние транзакции",
+  "recent_transactions_since": "Последние транзакции с",
+  "recipient": "Получатель",
+  "recipient_address": "Адрес получателя",
+  "recipient_id": "Идентификатор получателя",
+  "recipient_no_public_key": "У учетной записи получателя нет открытого ключа, то есть у нее никогда не было исходящей транзакции. На счете есть баланс __burst__ Signa. Пожалуйста, дважды проверьте свой адрес получателя перед отправкой.",
+  "recipients": "Получатели",
+  "record": "Записывать",
+  "referenced_transaction_full_hash": "Полный хэш указанной транзакции",
+  "refund": "Возврат",
+  "refunded": "Возвращено",
+  "register": "регистр",
+  "register_alias": "Зарегистрировать псевдоним",
+  "repeat": "Повторить",
+  "request_burst": "Запросить Signa",
+  "request_processing_time": "Время обработки запроса",
+  "reset_recipients": "Сбросить получателей",
+  "reward_recipient": "Получатель вознаграждения",
+  "same_out": "Такое же количество",
+  "scoop_num": "Номер совка",
+  "search": "Поиск",
+  "search_or_start_message": "Найдите или начните новое сообщение",
+  "secure": "Безопасный",
+  "seed_password_generator": "Переместите курсор, чтобы заполнить генератор случайных чисел и создать безопасную парольную фразу.",
+  "select_node": "Выбрать узел",
+  "select_node_description": "Выберите однорангового узла, к которому хотите подключиться. Вы можете использовать предложенный одноранговый узел, но также можете ввести произвольный URL-адрес однорангового узла.",
+  "select_recipients": "Выберите получателей",
+  "sell": "Продавать",
+  "semicolon": "Точка с запятой",
+  "send": "послать",
+  "send_burst": "Отправить сигнал",
+  "sender": "Отправитель",
+  "sender_address": "Адрес отправителя",
+  "sender_id": "Удостоверение личности отправителя",
+  "sender_public_key": "Открытый ключ отправителя",
+  "set_account_info": "Установить информацию об учетной записи",
+  "set_reward_recipient": "Установить получателя вознаграждения",
+  "settings": "Настройки",
+  "signature": "Подпись",
+  "signature_hash": "Подпись Хеш",
+  "smart_contract": "Смарт-контракт",
+  "smart_contract_creation": "Создание смарт-контрактов",
+  "smart_contract_payment": "Оплата по контракту",
+  "spend_all": "Потратить все",
+  "standard_fee": "Стандарт",
+  "state": "Состояние",
+  "status": "Статус",
+  "submit": "Представлять на рассмотрение",
+  "subscriptions": "Подписки",
+  "subtype": "Подтип",
+  "success_alias_register": "Псевдоним успешно зарегистрирован.",
+  "success_clipboard_copy": "Скопировано в буфер обмена успешно.",
+  "success_send_money": "Signa отправлена.",
+  "success_set_account_info": "Информация о вашей учетной записи была успешно сохранена.",
+  "success_set_reward_recipient": "Ваш получатель награды успешно установлен!",
+  "suggested_fee": "Предлагаемые сборы",
+  "tabulator": "Табулятор",
+  "time": "Время",
+  "timestamp": "Отметка времени",
+  "title": "Заголовок",
+  "to": "К",
+  "token": "Токен",
+  "total": "Общее",
+  "total_amount": "Общая сумма",
+  "total_fee": "Общая комиссия",
+  "transaction": "Сделка",
+  "transaction_details": "Детали транзакции",
+  "transaction_id": "ID транзакции",
+  "transactions": "Сделки",
+  "transfer": "Перевод",
+  "try_again": "Попробуй еще раз",
+  "type": "Тип",
+  "unknown": "Неизвестный",
+  "unknown_recipients": "Обнаружены неизвестные получатели",
+  "unknown_recipients_text": "Следующие получатели не могут быть проверены:",
+  "unknown_version": "Версия неизвестна",
+  "update": "Обновлять",
+  "update_available": "Доступно новое обновление",
+  "update_burst_account": "Импортировать существующую учетную запись",
+  "update_check": "Проверка обновления",
+  "update_up_to_date": "У вас уже есть последняя версия. Обновлять нет необходимости.",
+  "uploaded": "Загружено",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Действительный",
+  "valid_thru": "Годен до",
+  "validate": "Подтвердить",
+  "validating_node": "Проверка ...",
+  "verified_source": "Проверенный и безопасный источник",
+  "verify": "Проверять",
+  "version": "Версия",
+  "volume_24h": "Объем 24ч",
+  "vote": "Голосование",
+  "vote_casting": "Голосование",
+  "warning": "Предупреждение",
+  "watch_burst_account": "Наблюдать за учетной записью",
+  "wrong_pin": "Неверный PIN-код",
+  "yes": "да",
+  "yesterdays_change": "Изменение за последние 24 часа",
+  "you": "Ты",
+  "you_sent_burst": "Вы отправили сигну",
+  "your_address": "Ваш адресс",
+  "your_name": "Твое имя",
+  "your_passphrase": "Ваш пароль",
+  "youve_got_burst": "У тебя есть Синья!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Установить обязательство",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Отозвать обязательство",
+  "reward_recipient_assignment": "Назначение награды",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Успешно обновлено ваше обязательство по добыче полезных ископаемых",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Текущий выбранный узел",
+  "toggle_nodeselection_mode": "Переключитесь, чтобы переключаться между ручным или автоматическим выбором узла",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "себя"
 }
