--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Účet",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -261,146 +261,146 @@
   "or": "or",
   "order": "Order",
   "ordinary_payment": "Payment",
-  "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
+  "other": "Iné",
+  "passphrase": "Prístupová fráza",
+  "paste_csv_content": "Sem vložte obsah CSV",
+  "payload": "Užitočné zaťaženie",
+  "payload_hash": "Hash užitočného zaťaženia",
+  "payload_length": "Dĺžka užitočného zaťaženia",
+  "payment": "Platba",
+  "payments": "Platby",
+  "peer": "Rovesník",
+  "peers": "Rovesníci",
+  "pending": "Čaká sa",
+  "percentage": "Percento",
+  "pin_hint": "PIN sa používa na overenie akcií vykonaných s vaším účtom. Môže to byť krátka alfanumerická hodnota, ktorú si ľahko zapamätáte. Ak zabudnete PIN, môžete si jednoducho znova vytvoriť účet pomocou predtým vygenerovanej prístupovej frázy.",
+  "platform": "Plošina",
+  "poll_creation": "Vytvorenie ankety",
+  "previous_block": "Predchádzajúci blok",
+  "previous_block_hash": "Predchádzajúci blokovaný hash",
+  "price": "cena",
+  "price_chart_7d": "Cenový graf 7 dní",
+  "priority_fee": "Priorita",
+  "product": "Výrobok",
+  "public_key": "Verejný kľúč",
+  "purchase": "Nákup",
+  "qr_code": "QR kód",
+  "qr_code_data": "Údaje QR kódu",
+  "quantity": "Množstvo",
+  "recent_transactions": "Posledné transakcie",
+  "recent_transactions_since": "Posledné transakcie od",
+  "recipient": "Príjemca",
+  "recipient_address": "Adresa príjemcu",
+  "recipient_id": "ID príjemcu",
+  "recipient_no_public_key": "Účet príjemcu nemá verejný kľúč, čo znamená, že nikdy nemal odchádzajúcu transakciu. Zostatok na účte je __burst__ Signa. Pred odoslaním prosím dvakrát skontrolujte svoju adresu príjemcu.",
+  "recipients": "Príjemcovia",
+  "record": "Záznam",
+  "referenced_transaction_full_hash": "Plná hodnota hash za odkazovanú transakciu",
+  "refund": "Vrátenie peňazí",
+  "refunded": "Vrátené",
+  "register": "Registrovať",
+  "register_alias": "Registrovať alias",
+  "repeat": "Opakujte",
+  "request_burst": "Vyžiadajte si Signu",
+  "request_processing_time": "Požiadajte o čas spracovania",
+  "reset_recipients": "Obnoviť príjemcov",
+  "reward_recipient": "Príjemca odmeny",
+  "same_out": "Rovnaké množstvo",
+  "scoop_num": "Lopatkové číslo",
+  "search": "Vyhľadávanie",
+  "search_or_start_message": "Vyhľadajte alebo začnite novú správu",
+  "secure": "Zabezpečiť",
+  "seed_password_generator": "Pohybujte kurzorom, aby ste naštartovali generátor náhodných čísel, a vytvorte bezpečnú prístupovú frázu.",
+  "select_node": "Vyberte uzol",
+  "select_node_description": "Vyberte partnera, ku ktorému sa chcete pripojiť. Môžete použiť odporúčaný partnerský server, ale môžete tiež zadať ľubovoľnú partnerskú webovú adresu.",
+  "select_recipients": "Vyberte Príjemcovia",
+  "sell": "Predať",
+  "semicolon": "Bodkočiarka",
+  "send": "Pošli",
+  "send_burst": "Pošlite Signu",
+  "sender": "Odosielateľ",
+  "sender_address": "Adresa odosielateľa",
+  "sender_id": "ID odosielateľa",
+  "sender_public_key": "Verejný kľúč odosielateľa",
+  "set_account_info": "Nastaviť informácie o účte",
+  "set_reward_recipient": "Nastaviť príjemcu odmeny",
+  "settings": "nastavenie",
+  "signature": "Podpis",
+  "signature_hash": "Podpisový hash",
+  "smart_contract": "Inteligentná zmluva",
+  "smart_contract_creation": "Inteligentné vytváranie zmlúv",
+  "smart_contract_payment": "Platba zmluvy",
+  "spend_all": "Utratiť všetko",
+  "standard_fee": "Štandardné",
+  "state": "Štát",
+  "status": "Postavenie",
+  "submit": "Predložiť",
+  "subscriptions": "Predplatné",
+  "subtype": "Podtyp",
+  "success_alias_register": "Alias bol úspešne zaregistrovaný.",
+  "success_clipboard_copy": "Úspešne skopírované do schránky.",
+  "success_send_money": "Signa bola odoslaná.",
+  "success_set_account_info": "Informácie o vašom účte boli úspešne uložené.",
+  "success_set_reward_recipient": "Váš príjemca odmeny bol úspešne nastavený!",
+  "suggested_fee": "Navrhované poplatky",
+  "tabulator": "Tabulátor",
+  "time": "Čas",
+  "timestamp": "Časová značka",
+  "title": "Názov",
   "to": "To",
   "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "total": "Celkom",
+  "total_amount": "Celková suma",
+  "total_fee": "Celkový poplatok",
+  "transaction": "Transakcia",
+  "transaction_details": "detaily transakcie",
+  "transaction_id": "ID transakcie",
+  "transactions": "Transakcie",
+  "transfer": "Prenos",
+  "try_again": "Skúste to znova",
+  "type": "Typ",
+  "unknown": "Neznáme",
+  "unknown_recipients": "Zistili sa neznámi príjemcovia",
+  "unknown_recipients_text": "Nasledujúcich príjemcov sa nepodarilo overiť:",
+  "unknown_version": "Verzia neznáma",
+  "update": "Aktualizácia",
+  "update_available": "K dispozícii je nová aktualizácia",
+  "update_burst_account": "Importujte existujúci účet",
+  "update_check": "Kontrola aktualizácií",
+  "update_up_to_date": "Už máte najnovšie vydanie. Nie je potrebné aktualizovať.",
+  "uploaded": "Nahrané",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Platný",
+  "valid_thru": "Platné do",
+  "validate": "Potvrdiť",
+  "validating_node": "Prebieha overovanie ...",
+  "verified_source": "Overený a bezpečný zdroj",
+  "verify": "Overiť",
+  "version": "Verzia",
+  "volume_24h": "Zväzok 24 hodín",
+  "vote": "Hlasujte",
+  "vote_casting": "Hlasovanie",
+  "warning": "Pozor",
+  "watch_burst_account": "Sledujte účet",
+  "wrong_pin": "Chybný PIN",
+  "yes": "Áno",
+  "yesterdays_change": "Zmena za posledných 24 hodín",
+  "you": "Vy",
+  "you_sent_burst": "Poslali ste Signu",
+  "your_address": "Vaša adresa",
+  "your_name": "Tvoje meno",
+  "your_passphrase": "Vaša prístupová fráza",
+  "youve_got_burst": "Máš Signu!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Stanoviť záväzok",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Odvolať záväzok",
+  "reward_recipient_assignment": "Odmena za pridelenie",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Úspešne ste aktualizovali svoj záväzok k ťažbe",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Aktuálne vybraný uzol",
+  "toggle_nodeselection_mode": "Prepínaním prepínate medzi manuálnym alebo automatickým výberom uzla",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "ja"
 }
