--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "hesap",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -261,146 +261,146 @@
   "or": "or",
   "order": "Order",
   "ordinary_payment": "Payment",
-  "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
+  "other": "Diğer",
+  "passphrase": "parola",
+  "paste_csv_content": "CSV içeriğini buraya yapıştırın",
+  "payload": "yük",
+  "payload_hash": "Yük Karması",
+  "payload_length": "Yük Uzunluğu",
+  "payment": "Ödeme",
+  "payments": "ödemeler",
+  "peer": "akran",
+  "peers": "akranlar",
+  "pending": "Bekliyor",
+  "percentage": "Yüzde",
+  "pin_hint": "PIN, hesabınızla yapılan işlemleri doğrulamak için kullanılır. Ezberlemesi kolay kısa bir alfasayısal değer olabilir. PIN'inizi unutursanız, önceden oluşturulmuş parolayı kullanarak hesabınızı yeniden oluşturabilirsiniz.",
+  "platform": "platformu",
+  "poll_creation": "Anket Oluşturma",
+  "previous_block": "Önceki Blok",
+  "previous_block_hash": "Önceki Blok Karması",
+  "price": "Fiyat",
+  "price_chart_7d": "Fiyat Tablosu 7 gün",
+  "priority_fee": "Öncelik",
+  "product": "Ürün",
+  "public_key": "Genel anahtar",
+  "purchase": "Satın alma",
+  "qr_code": "QR kod",
+  "qr_code_data": "QR Kod Verileri",
+  "quantity": "miktar",
+  "recent_transactions": "Son İşlemler",
+  "recent_transactions_since": "O zamandan beri son işlemler",
+  "recipient": "alıcı",
+  "recipient_address": "Alıcı adresi",
+  "recipient_id": "alıcı kimliği",
+  "recipient_no_public_key": "Alıcı hesabının ortak anahtarı yoktur, yani hiçbir zaman giden bir işlemi olmamıştır. Hesapta __burst__ Signa bakiyesi var. Lütfen göndermeden önce alıcı adresinizi iki kez kontrol edin.",
+  "recipients": "alıcılar",
+  "record": "Kayıt",
+  "referenced_transaction_full_hash": "Başvurulan İşlem Tam Hash",
+  "refund": "Geri ödeme",
+  "refunded": "geri ödendi",
+  "register": "Kayıt ol",
+  "register_alias": "Takma Adı Kaydet",
+  "repeat": "Tekrar et",
+  "request_burst": "Signa İste",
+  "request_processing_time": "İşlem Süresi Talebi",
+  "reset_recipients": "Alıcıları Sıfırla",
+  "reward_recipient": "Ödül Alıcısı",
+  "same_out": "Aynı Miktar",
+  "scoop_num": "Kepçe Numarası",
+  "search": "Arama",
+  "search_or_start_message": "Yeni mesaj arayın veya başlatın",
+  "secure": "Güvenli",
+  "seed_password_generator": "Rasgele sayı üretecini tohumlamak ve güvenli bir parola oluşturmak için imlecinizi hareket ettirin.",
+  "select_node": "Düğüm Seç",
+  "select_node_description": "Bağlanmak istediğiniz eşi seçin. Önerilen bir eş kullanabilirsiniz, ancak isteğe bağlı bir eş url de girebilirsiniz.",
+  "select_recipients": "Alıcıları Seçin",
+  "sell": "Satmak",
+  "semicolon": "Noktalı virgül",
+  "send": "gönder",
+  "send_burst": "Signa'yı gönder",
+  "sender": "Gönderen",
+  "sender_address": "Gönderen adresi",
+  "sender_id": "Gönderen Kimliği",
+  "sender_public_key": "Gönderen Ortak Anahtarı",
+  "set_account_info": "Hesap Bilgilerini Ayarla",
+  "set_reward_recipient": "Ödül Alıcısını Ayarla",
+  "settings": "Ayarlar",
+  "signature": "İmza",
+  "signature_hash": "İmza Karması",
+  "smart_contract": "Akıllı Sözleşme",
+  "smart_contract_creation": "Akıllı Sözleşme Oluşturma",
+  "smart_contract_payment": "Sözleşme Ödemesi",
+  "spend_all": "Hepsini harcamak",
+  "standard_fee": "Standart",
+  "state": "Durum",
+  "status": "Durum",
+  "submit": "Sunmak",
+  "subscriptions": "abonelikler",
+  "subtype": "alt tip",
+  "success_alias_register": "Takma ad başarıyla kaydedildi.",
+  "success_clipboard_copy": "Panoya başarıyla kopyalandı.",
+  "success_send_money": "Signa gönderildi.",
+  "success_set_account_info": "Hesap bilgileriniz başarıyla kaydedildi.",
+  "success_set_reward_recipient": "Ödül alıcınız başarıyla belirlendi!",
+  "suggested_fee": "Önerilen ücretler",
   "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "time": "Zaman",
+  "timestamp": "zaman damgası",
+  "title": "Başlık",
+  "to": "için",
+  "token": "Jeton",
+  "total": "Toplam",
+  "total_amount": "Toplam tutar",
+  "total_fee": "Toplam ücret",
+  "transaction": "İşlem",
+  "transaction_details": "ödeme detayları",
+  "transaction_id": "İşlem Kimliği",
+  "transactions": "işlemler",
+  "transfer": "Aktar",
+  "try_again": "Tekrar deneyin",
+  "type": "Tür",
+  "unknown": "Bilinmeyen",
+  "unknown_recipients": "Bilinmeyen Alıcılar Algılandı",
+  "unknown_recipients_text": "Aşağıdaki alıcı(lar) doğrulanamadı:",
+  "unknown_version": "Sürüm bilinmiyor",
+  "update": "Güncelleme",
+  "update_available": "Yeni güncelleme mevcut",
+  "update_burst_account": "Mevcut hesabı içe aktar",
+  "update_check": "Güncelleme kontrolü",
+  "update_up_to_date": "En son sürüme zaten sahipsiniz. Güncellemeye gerek yok.",
+  "uploaded": "yüklendi",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Geçerli",
+  "valid_thru": "Şuna kadar geçerlidir:",
+  "validate": "Doğrula",
+  "validating_node": "Doğrulanıyor...",
+  "verified_source": "Doğrulanmış ve güvenli kaynak",
+  "verify": "Doğrulayın",
+  "version": "Sürüm",
+  "volume_24h": "Cilt 24 saat",
+  "vote": "Oy",
+  "vote_casting": "Oy Verme",
+  "warning": "Uyarı",
+  "watch_burst_account": "Hesabı Gözlemle",
+  "wrong_pin": "Yanlış PIN",
+  "yes": "Evet",
+  "yesterdays_change": "Son 24 Saatlik Değişiklik",
+  "you": "Sen",
+  "you_sent_burst": "Signa'yı gönderdin",
+  "your_address": "Senin adresin",
+  "your_name": "Adınız",
+  "your_passphrase": "Parolanız",
+  "youve_got_burst": "Signa'nız var!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Bağlılığı Ayarla",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Taahhüdü İptal Et",
+  "reward_recipient_assignment": "Ödül Atama",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Madencilik taahhüdünüz başarıyla güncellendi",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Şu anda seçili düğüm",
+  "toggle_nodeselection_mode": "Manuel veya otomatik düğüm seçimi arasında geçiş yapmak için geçiş yapın",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "öz"
 }
