--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Рахунок",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -261,146 +261,146 @@
   "or": "or",
   "order": "Order",
   "ordinary_payment": "Payment",
-  "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "other": "Інший",
+  "passphrase": "Парольна фраза",
+  "paste_csv_content": "Вставте сюди вміст CSV",
+  "payload": "Корисне навантаження",
+  "payload_hash": "Хеш корисного навантаження",
+  "payload_length": "Довжина корисного навантаження",
+  "payment": "Оплата",
+  "payments": "Платежі",
+  "peer": "Ровесник",
+  "peers": "Однолітки",
+  "pending": "В очікуванні",
+  "percentage": "Процент",
+  "pin_hint": "PIN-код використовується для підтвердження дій, здійснених із вашим обліковим записом. Це може бути коротке буквено-цифрове значення, яке легко запам’ятати. Якщо ви забули свій PIN-код, ви можете просто створити свій рахунок, використовуючи попередньо створену парольну фразу.",
+  "platform": "Платформа",
+  "poll_creation": "Створення опитування",
+  "previous_block": "Попередній блок",
+  "previous_block_hash": "Попередній хеш блоку",
+  "price": "Ціна",
+  "price_chart_7d": "Графік цін 7 днів",
+  "priority_fee": "Пріоритет",
+  "product": "Продукт",
+  "public_key": "Відкритий ключ",
+  "purchase": "Покупка",
+  "qr_code": "QR-код",
+  "qr_code_data": "Дані QR-коду",
+  "quantity": "Кількість",
+  "recent_transactions": "Останні транзакції",
+  "recent_transactions_since": "Останні операції з",
+  "recipient": "Одержувач",
+  "recipient_address": "Адреса одержувача",
+  "recipient_id": "Ідентифікатор одержувача",
+  "recipient_no_public_key": "Обліковий запис одержувача не має відкритого ключа, тобто він ніколи не мав вихідної транзакції. Залишок на рахунку __burst__ Signa. Будь ласка, перевірте адресу одержувача перед надсиланням.",
+  "recipients": "Одержувачі",
+  "record": "Запис",
+  "referenced_transaction_full_hash": "Повний хеш згаданої транзакції",
+  "refund": "Відшкодування",
+  "refunded": "Повернено",
+  "register": "Зареєструйтесь",
+  "register_alias": "Зареєструвати псевдонім",
+  "repeat": "Повторити",
+  "request_burst": "Запит Signa",
+  "request_processing_time": "Час обробки запиту",
+  "reset_recipients": "Скинути одержувачів",
+  "reward_recipient": "Одержувач винагороди",
+  "same_out": "Та сама сума",
+  "scoop_num": "Номер совка",
+  "search": "Пошук",
+  "search_or_start_message": "Шукати або розпочати нове повідомлення",
+  "secure": "Захищений",
+  "seed_password_generator": "Наведіть курсор навколо, щоб засіяти генератор випадкових чисел і створити безпечну парольну фразу.",
+  "select_node": "Виберіть Вузол",
+  "select_node_description": "Виберіть одноліток, з яким потрібно підключитися. Ви можете використовувати запропонований одноранговий аналог, але також можете ввести довільну URL-адресу однолітків.",
+  "select_recipients": "Виберіть Одержувачі",
+  "sell": "Продавати",
+  "semicolon": "Крапка з комою",
+  "send": "Надіслати",
+  "send_burst": "Надіслати Signa",
+  "sender": "Відправник",
+  "sender_address": "Адреса відправника",
+  "sender_id": "Ідентифікатор відправника",
+  "sender_public_key": "Відкритий ключ відправника",
+  "set_account_info": "Встановити інформацію про обліковий запис",
+  "set_reward_recipient": "Встановити одержувача винагороди",
+  "settings": "Налаштування",
+  "signature": "Підпис",
+  "signature_hash": "Хеш підпису",
+  "smart_contract": "Смарт-контракт",
+  "smart_contract_creation": "Створення розумного контракту",
+  "smart_contract_payment": "Виплата за контрактом",
+  "spend_all": "Витратити всіх",
+  "standard_fee": "Стандартний",
+  "state": "Держава",
+  "status": "Статус",
+  "submit": "Подати",
+  "subscriptions": "Підписки",
+  "subtype": "Підтип",
+  "success_alias_register": "Псевдонім зареєстровано успішно.",
+  "success_clipboard_copy": "Скопійовано в буфер обміну.",
+  "success_send_money": "Signa надіслано.",
+  "success_set_account_info": "Інформацію про ваш рахунок успішно збережено.",
+  "success_set_reward_recipient": "Одержувача винагороди встановлено успішно!",
+  "suggested_fee": "Запропоновані збори",
+  "tabulator": "Табулятор",
+  "time": "Час",
+  "timestamp": "Мітка часу",
+  "title": "Заголовок",
+  "to": "До",
+  "token": "Токен",
+  "total": "Усього",
+  "total_amount": "Загальна кількість",
+  "total_fee": "Загальний внесок",
+  "transaction": "Транзакція",
+  "transaction_details": "Подробиці транзакції",
+  "transaction_id": "ID транзакції",
+  "transactions": "Операції",
+  "transfer": "Передача",
+  "try_again": "Спробуйте ще раз",
+  "type": "Тип",
+  "unknown": "Невідомо",
+  "unknown_recipients": "Виявлено невідомих одержувачів",
+  "unknown_recipients_text": "Неможливо перевірити таких одержувачів:",
+  "unknown_version": "Версія невідома",
+  "update": "Оновлення",
+  "update_available": "Доступне нове оновлення",
+  "update_burst_account": "Імпортувати наявний рахунок",
+  "update_check": "Перевірка оновлення",
+  "update_up_to_date": "У вас уже є остання версія. Не потрібно оновлювати.",
+  "uploaded": "Завантажено",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Дійсний",
+  "valid_thru": "Дійсний до",
+  "validate": "Перевірити",
+  "validating_node": "Перевірка ...",
+  "verified_source": "Перевірене та безпечне джерело",
+  "verify": "Перевірити",
+  "version": "Версія",
+  "volume_24h": "Обсяг 24 год",
+  "vote": "Голосувати",
+  "vote_casting": "Кастинг голосів",
+  "warning": "Увага",
+  "watch_burst_account": "Спостерігайте за рахунком",
+  "wrong_pin": "Неправильний PIN-код",
+  "yes": "Так",
+  "yesterdays_change": "Зміна останніх 24 годин",
+  "you": "ти",
+  "you_sent_burst": "Ви надіслали Signa",
+  "your_address": "Вашу адресу",
+  "your_name": "Твоє ім'я",
+  "your_passphrase": "Ваша парольна фраза",
+  "youve_got_burst": "У вас є Signa!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Встановіть зобов'язання",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Відкликати зобов'язання",
+  "reward_recipient_assignment": "Призначення винагороди",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Успішно оновлено ваше зобов'язання щодо видобутку корисних копалин",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Наразі вибраний вузол",
+  "toggle_nodeselection_mode": "Перемикайте, щоб перемикатися між ручним або автоматичним вибором вузлів",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "себе"
 }
