--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Račun",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -262,145 +262,145 @@
   "order": "Order",
   "ordinary_payment": "Payment",
   "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
+  "passphrase": "Zaporka",
+  "paste_csv_content": "Ovdje zalijepite CSV sadržaj",
+  "payload": "Korisni teret",
+  "payload_hash": "Hash korisničkog tereta",
+  "payload_length": "Duljina korisnog tereta",
+  "payment": "Plaćanje",
+  "payments": "Plaćanja",
+  "peer": "Vršnjakinja",
+  "peers": "Kolega",
+  "pending": "U tijeku",
+  "percentage": "Postotak",
+  "pin_hint": "PIN se koristi za provjeru radnji izvršenih s vašim računom. To može biti kratka alfanumerička vrijednost koju je lako zapamtiti. Ako zaboravite svoj PIN, možete jednostavno ponovno stvoriti svoj račun pomoću prethodno generirane lozinke.",
+  "platform": "Platforma",
+  "poll_creation": "Izrada ankete",
+  "previous_block": "Prethodni blok",
+  "previous_block_hash": "Prethodni blok raspršivač",
+  "price": "Cijena",
+  "price_chart_7d": "Grafikon cijena 7 dana",
+  "priority_fee": "Prioritet",
+  "product": "Proizvod",
+  "public_key": "Javni ključ",
+  "purchase": "Kupiti",
+  "qr_code": "QR kod",
+  "qr_code_data": "Podaci QR koda",
+  "quantity": "Količina",
+  "recent_transactions": "Nedavne transakcije",
+  "recent_transactions_since": "Nedavne transakcije od",
+  "recipient": "Primatelj",
+  "recipient_address": "Adresa primatelja",
+  "recipient_id": "ID primatelja",
+  "recipient_no_public_key": "Račun primatelja nema javni ključ, što znači da nikada nije imao odlaznu transakciju. Stanje na računu je __ prasak__ Signa. Molimo provjerite adresu primatelja prije slanja.",
+  "recipients": "Primatelji",
+  "record": "Snimiti",
+  "referenced_transaction_full_hash": "Referentna transakcija Full Hash",
+  "refund": "Povrat novca",
+  "refunded": "Povrat novca",
+  "register": "Registar",
+  "register_alias": "Registrirajte alias",
+  "repeat": "Ponoviti",
+  "request_burst": "Zatražite Signa",
+  "request_processing_time": "Vrijeme obrade zahtjeva",
+  "reset_recipients": "Resetiraj primatelje",
+  "reward_recipient": "Primatelj nagrade",
+  "same_out": "Ista količina",
   "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
+  "search": "traži",
+  "search_or_start_message": "Pretražite ili započnite novu poruku",
+  "secure": "Siguran",
+  "seed_password_generator": "Pomaknite pokazivač da biste zasadili generator slučajnih brojeva i stvorili sigurnu lozinku.",
+  "select_node": "Odaberite Čvor",
+  "select_node_description": "Odaberite vršnjak s kojim se želite povezati. Možete upotrijebiti predloženi peer, ali možete unijeti i proizvoljan URL peer.",
+  "select_recipients": "Odaberite Primatelji",
+  "sell": "Prodavati",
+  "semicolon": "Točka i zarez",
+  "send": "Poslati",
+  "send_burst": "Pošaljite Signu",
+  "sender": "Pošiljatelj",
+  "sender_address": "Adresa pošiljatelja",
+  "sender_id": "ID pošiljatelja",
+  "sender_public_key": "Javni ključ pošiljatelja",
+  "set_account_info": "Postavite podatke o računu",
+  "set_reward_recipient": "Postavite primatelja nagrade",
+  "settings": "Postavke",
+  "signature": "Potpis",
+  "signature_hash": "Hash potpisa",
+  "smart_contract": "Pametni ugovor",
+  "smart_contract_creation": "Izrada pametnog ugovora",
+  "smart_contract_payment": "Ugovorno plaćanje",
+  "spend_all": "Potroši sve",
   "standard_fee": "Standard",
-  "state": "State",
+  "state": "država",
   "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
+  "submit": "podnijeti",
+  "subscriptions": "Pretplate",
+  "subtype": "Podtip",
+  "success_alias_register": "Alias je uspješno registriran.",
+  "success_clipboard_copy": "Uspješno kopirano u međuspremnik.",
+  "success_send_money": "Signa je poslana.",
+  "success_set_account_info": "Podaci o vašem računu uspješno su spremljeni.",
+  "success_set_reward_recipient": "Vaš je primatelj nagrade uspješno postavljen!",
+  "suggested_fee": "Predložene naknade",
   "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "time": "Vrijeme",
+  "timestamp": "Vremenska oznaka",
+  "title": "Titula",
+  "to": "Do",
+  "token": "Znak",
+  "total": "Ukupno",
+  "total_amount": "Ukupni iznos",
+  "total_fee": "Ukupna naknada",
+  "transaction": "Transakcija",
+  "transaction_details": "detalji transakcije",
+  "transaction_id": "ID transakcije",
+  "transactions": "Transakcije",
+  "transfer": "Prijenos",
+  "try_again": "Pokušajte ponovo",
+  "type": "Tip",
+  "unknown": "Nepoznato",
+  "unknown_recipients": "Otkriveni nepoznati primatelji",
+  "unknown_recipients_text": "Sljedeće primatelje (e) nije moguće provjeriti:",
+  "unknown_version": "Verzija nepoznata",
+  "update": "ažuriranje",
+  "update_available": "Dostupno novo ažuriranje",
+  "update_burst_account": "Uvezi postojeći račun",
+  "update_check": "Provjera ažuriranja",
+  "update_up_to_date": "Već imate najnovije izdanje. Nema potrebe za ažuriranjem.",
+  "uploaded": "Otpremljeno",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "Vrijedi",
+  "valid_thru": "Vrijedi do",
+  "validate": "Potvrdi",
+  "validating_node": "Provjera valjanosti ...",
+  "verified_source": "Provjeren i siguran izvor",
+  "verify": "Potvrdite",
+  "version": "Verzija",
+  "volume_24h": "Svezak 24h",
+  "vote": "Glasanje",
+  "vote_casting": "Lijevanje glasova",
+  "warning": "Upozorenje",
+  "watch_burst_account": "Promatrajte račun",
+  "wrong_pin": "Pogrešan PIN",
+  "yes": "Da",
+  "yesterdays_change": "Promjena u posljednja 24 sata",
+  "you": "Vas",
+  "you_sent_burst": "Poslali ste Signu",
+  "your_address": "Vaša adresa",
+  "your_name": "Tvoje ime",
+  "your_passphrase": "Vaša lozinka",
+  "youve_got_burst": "Imate Signu!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Postavite predanost",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Opozovi obvezu",
+  "reward_recipient_assignment": "Dodjela nagrade",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Uspješno ste ažurirali svoju obvezu rudarenja",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Trenutno odabrani čvor",
+  "toggle_nodeselection_mode": "Prebacite za prebacivanje između ručnog ili automatskog odabira čvora",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "sebe"
 }
