--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "Рачун",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -261,146 +261,146 @@
   "or": "or",
   "order": "Order",
   "ordinary_payment": "Payment",
-  "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
-  "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "other": "Остало",
+  "passphrase": "Пасспхрасе",
+  "paste_csv_content": "Овде налепите ЦСВ садржај",
+  "payload": "Носивост",
+  "payload_hash": "Хасх корисничког терета",
+  "payload_length": "Дужина корисног терета",
+  "payment": "Плаћање",
+  "payments": "Плаћања",
+  "peer": "Вршњак",
+  "peers": "Вршњаци",
+  "pending": "нерешен",
+  "percentage": "Проценат",
+  "pin_hint": "ПИН се користи за верификацију радњи извршених са вашим налогом. То може бити кратка алфанумеричка вредност коју је лако запамтити. Ако заборавите свој ПИН, можете једноставно поново креирати свој рачун помоћу претходно генерисане приступне фразе.",
+  "platform": "Платформа",
+  "poll_creation": "Израда анкете",
+  "previous_block": "Претходни блок",
+  "previous_block_hash": "Претходни блок хеш",
+  "price": "Цена",
+  "price_chart_7d": "Графикон цена 7 дана",
+  "priority_fee": "Приоритет",
+  "product": "Производа",
+  "public_key": "Јавни кључ",
+  "purchase": "Куповина",
+  "qr_code": "КР код",
+  "qr_code_data": "Подаци КР кода",
+  "quantity": "Количина",
+  "recent_transactions": "Недавне трансакције",
+  "recent_transactions_since": "Недавне трансакције од",
+  "recipient": "Прималац",
+  "recipient_address": "Прималац адреса",
+  "recipient_id": "ИД примаоца",
+  "recipient_no_public_key": "Налог примаоца нема јавни кључ, што значи да никада није имао одлазну трансакцију. Стање на рачуну је __ бурст__ Сигна. Пре слања, поново проверите адресу примаоца.",
+  "recipients": "Примаоци",
+  "record": "Запис",
+  "referenced_transaction_full_hash": "Референтна трансакција Фулл Хасх",
+  "refund": "Враћање новца",
+  "refunded": "Рефундед",
+  "register": "Регистровати",
+  "register_alias": "Региструјте алиас",
+  "repeat": "Понављање",
+  "request_burst": "Захтевај Сигна",
+  "request_processing_time": "Захтев за обраду времена",
+  "reset_recipients": "Ресетуј примаоце",
+  "reward_recipient": "Прималац награде",
+  "same_out": "Исти износ",
+  "scoop_num": "Сцооп Нумбер",
+  "search": "Претрага",
+  "search_or_start_message": "Претражите или започните нову поруку",
+  "secure": "Сигурно",
+  "seed_password_generator": "Померите курсор да бисте поставили генератор случајних бројева и креирали сигурну приступну фразу.",
+  "select_node": "Изаберите Ноде",
+  "select_node_description": "Изаберите вршњак са којим желите да се повежете. Можете да користите предложени пеер, али такође можете да унесете и произвољан УРЛ пеер.",
+  "select_recipients": "Изаберите Примаоци",
+  "sell": "Продај",
+  "semicolon": "Тацка зарез",
+  "send": "Пошаљите",
+  "send_burst": "Пошаљи Сигну",
+  "sender": "Пошиљалац",
+  "sender_address": "Адреса пошиљаоца",
+  "sender_id": "ИД пошиљаоца",
+  "sender_public_key": "Јавни кључ пошиљаоца",
+  "set_account_info": "Подесите информације о налогу",
+  "set_reward_recipient": "Постави примаоца награде",
+  "settings": "Подешавања",
+  "signature": "Потпис",
+  "signature_hash": "Сигнатуре Хасх",
+  "smart_contract": "Паметан уговор",
+  "smart_contract_creation": "Израда паметног уговора",
+  "smart_contract_payment": "Плаћање по уговору",
+  "spend_all": "Потроши све",
+  "standard_fee": "Стандард",
+  "state": "Стање",
+  "status": "Статус",
+  "submit": "прихвати",
+  "subscriptions": "Претплате",
+  "subtype": "Подтип",
+  "success_alias_register": "Псеудоним је успешно регистрован.",
+  "success_clipboard_copy": "Успешно копирано у привремену меморију.",
+  "success_send_money": "Сигна је послата.",
+  "success_set_account_info": "Подаци о налогу су успешно сачувани.",
+  "success_set_reward_recipient": "Прималац награде је успешно постављен!",
+  "suggested_fee": "Предложене накнаде",
+  "tabulator": "Табулатор",
+  "time": "време",
+  "timestamp": "Временска ознака",
+  "title": "Наслов",
+  "to": "До",
+  "token": "Токен",
+  "total": "Укупно",
+  "total_amount": "Укупна сума",
+  "total_fee": "Укупна накнада",
+  "transaction": "Трансакција",
+  "transaction_details": "Детаљи трансакције",
+  "transaction_id": "ИД трансакције",
+  "transactions": "Трансакције",
+  "transfer": "Трансфер",
+  "try_again": "Покушајте поново",
+  "type": "Тип",
+  "unknown": "Непознат",
+  "unknown_recipients": "Откривени непознати примаоци",
+  "unknown_recipients_text": "Следећи примаоци нису могли бити потврђени:",
+  "unknown_version": "Верзија непозната",
+  "update": "ажурирање",
+  "update_available": "Доступно ново ажурирање",
+  "update_burst_account": "Увези постојећи рачун",
+  "update_check": "Ажурирање провера",
+  "update_up_to_date": "Већ имате најновије издање. Нема потребе за ажурирањем.",
+  "uploaded": "Отпремљено",
+  "uri": "УРИ",
+  "valid": "Важи",
+  "valid_thru": "Важи до",
+  "validate": "Потврди",
+  "validating_node": "Провера ...",
+  "verified_source": "Верификован и сигуран извор",
+  "verify": "Проверити",
+  "version": "Верзија",
+  "volume_24h": "Волуме 24х",
+  "vote": "Гласајте",
+  "vote_casting": "Гласање",
+  "warning": "Упозорење",
+  "watch_burst_account": "Посматрајте рачун",
+  "wrong_pin": "Погрешан ПИН",
+  "yes": "да",
+  "yesterdays_change": "Промена у последња 24 сата",
+  "you": "ти",
+  "you_sent_burst": "Послали сте Сигну",
+  "your_address": "Ваша адреса",
+  "your_name": "Твоје име",
+  "your_passphrase": "Ваша приступна фраза",
+  "youve_got_burst": "Имаш Сигну!",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "Поставите обавезу",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "Опозови обавезу",
+  "reward_recipient_assignment": "Додељивање награде",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "Успешно сте ажурирали обавезу рударства",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "Тренутно изабрани чвор",
+  "toggle_nodeselection_mode": "Пребаците за пребацивање између ручног или аутоматског избора чвора",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "себе"
 }
