--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -1,5 +1,5 @@
 {
-  "account": "Account",
+  "account": "帐户",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
@@ -261,146 +261,146 @@
   "or": "or",
   "order": "Order",
   "ordinary_payment": "Payment",
-  "other": "Other",
-  "passphrase": "Passphrase",
-  "paste_csv_content": "Paste the CSV content here",
-  "payload": "Payload",
-  "payload_hash": "Payload Hash",
-  "payload_length": "Payload Length",
-  "payment": "Payment",
-  "payments": "Payments",
-  "peer": "Peer",
-  "peers": "Peers",
-  "pending": "Pending",
-  "percentage": "Percentage",
-  "pin_hint": "The PIN is used to verify actions made with your account. It can be a short alphanumeric value that is easy to memorize. If you forget your PIN you can simply recreate your account using the priorly generated passphrase.",
-  "platform": "Platform",
-  "poll_creation": "Poll Creation",
-  "previous_block": "Previous Block",
-  "previous_block_hash": "Previous Block Hash",
-  "price": "Price",
-  "price_chart_7d": "Price Chart 7 days",
-  "priority_fee": "Priority",
-  "product": "Product",
-  "public_key": "Public Key",
-  "purchase": "Purchase",
-  "qr_code": "QR Code",
-  "qr_code_data": "QR Code Data",
-  "quantity": "Quantity",
-  "recent_transactions": "Recent Transactions",
-  "recent_transactions_since": "Recent transactions since",
-  "recipient": "Recipient",
-  "recipient_address": "Recipient Address",
-  "recipient_id": "Recipient ID",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ Signa. Please double check your recipient address before submitting.",
-  "recipients": "Recipients",
-  "record": "Record",
-  "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
-  "refund": "Refund",
-  "refunded": "Refunded",
-  "register": "Register",
-  "register_alias": "Register Alias",
-  "repeat": "Repeat",
-  "request_burst": "Request Signa",
-  "request_processing_time": "Request Processing Time",
-  "reset_recipients": "Reset Recipients",
-  "reward_recipient": "Reward Recipient",
-  "same_out": "Same Amount",
-  "scoop_num": "Scoop Number",
-  "search": "Search",
-  "search_or_start_message": "Search or start new message",
-  "secure": "Secure",
-  "seed_password_generator": "Move your cursor around to seed the random number generator and create a secure passphrase.",
-  "select_node": "Select Node",
-  "select_node_description": "Select the peer you want to connect to. You may use a suggested peer, but may also enter an arbitrary peer url.",
-  "select_recipients": "Select Recipients",
-  "sell": "Sell",
-  "semicolon": "Semicolon",
-  "send": "Send",
-  "send_burst": "Send Signa",
-  "sender": "Sender",
-  "sender_address": "Sender Address",
-  "sender_id": "Sender ID",
-  "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
-  "set_reward_recipient": "Set Reward Recipient",
-  "settings": "Settings",
-  "signature": "Signature",
-  "signature_hash": "Signature Hash",
-  "smart_contract": "Smart Contract",
-  "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Contract Payment",
-  "spend_all": "Spend all",
-  "standard_fee": "Standard",
-  "state": "State",
-  "status": "Status",
-  "submit": "Submit",
-  "subscriptions": "Subscriptions",
-  "subtype": "Subtype",
-  "success_alias_register": "Alias registered successfully.",
-  "success_clipboard_copy": "Copied to the clipboard successfully.",
-  "success_send_money": "Signa has been sent.",
-  "success_set_account_info": "Your account info has been saved successfully.",
-  "success_set_reward_recipient": "Your reward recipient has been set successfully!",
-  "suggested_fee": "Suggested fees",
-  "tabulator": "Tabulator",
-  "time": "Time",
-  "timestamp": "Timestamp",
-  "title": "Title",
-  "to": "To",
-  "token": "Token",
-  "total": "Total",
-  "total_amount": "Total Amount",
-  "total_fee": "Total Fee",
-  "transaction": "Transaction",
-  "transaction_details": "Transaction Details",
-  "transaction_id": "Transaction ID",
-  "transactions": "Transactions",
-  "transfer": "Transfer",
-  "try_again": "Try Again",
-  "type": "Type",
-  "unknown": "Unknown",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "unknown_version": "Version unknown",
-  "update": "Update",
-  "update_available": "New update available",
-  "update_burst_account": "Import existing account",
-  "update_check": "Update Check",
-  "update_up_to_date": "You have the latest release already. There is no need to update.",
-  "uploaded": "Uploaded",
+  "other": "其他",
+  "passphrase": "密码",
+  "paste_csv_content": "在此处粘贴 CSV 内容",
+  "payload": "有效载荷",
+  "payload_hash": "有效载荷哈希",
+  "payload_length": "有效载荷长度",
+  "payment": "支付",
+  "payments": "付款",
+  "peer": "同行",
+  "peers": "同行",
+  "pending": "待办的",
+  "percentage": "百分比",
+  "pin_hint": "PIN 用于验证使用您的帐户进行的操作。它可以是易于记忆的简短字母数字值。如果您忘记了 PIN 码，您只需使用之前生成的密码重新创建您的帐户即可。",
+  "platform": "平台",
+  "poll_creation": "投票创建",
+  "previous_block": "上一个区块",
+  "previous_block_hash": "上一个区块哈希",
+  "price": "价格",
+  "price_chart_7d": "价格图表 7 天",
+  "priority_fee": "优先事项",
+  "product": "产品",
+  "public_key": "公钥",
+  "purchase": "购买",
+  "qr_code": "二维码",
+  "qr_code_data": "二维码数据",
+  "quantity": "数量",
+  "recent_transactions": "近期交易",
+  "recent_transactions_since": "最近的交易自",
+  "recipient": "接受者",
+  "recipient_address": "收件人地址",
+  "recipient_id": "收件人编号",
+  "recipient_no_public_key": "收件人帐户没有公钥，这意味着它从未有过传出交易。该帐户的余额为 __burst__ Signa。请在提交前仔细检查您的收件人地址。",
+  "recipients": "收件人",
+  "record": "记录",
+  "referenced_transaction_full_hash": "引用交易全哈希",
+  "refund": "退款",
+  "refunded": "已退款",
+  "register": "登记",
+  "register_alias": "注册别名",
+  "repeat": "重复",
+  "request_burst": "请求签名",
+  "request_processing_time": "请求处理时间",
+  "reset_recipients": "重置收件人",
+  "reward_recipient": "奖励接受者",
+  "same_out": "相同数量",
+  "scoop_num": "勺号",
+  "search": "搜索",
+  "search_or_start_message": "搜索或开始新消息",
+  "secure": "安全的",
+  "seed_password_generator": "四处移动光标以播种随机数生成器并创建安全密码。",
+  "select_node": "选择节点",
+  "select_node_description": "选择要连接的对等点。您可以使用建议的对等点，但也可以输入任意对等点 url。",
+  "select_recipients": "选择收件人",
+  "sell": "卖",
+  "semicolon": "分号",
+  "send": "发送",
+  "send_burst": "发送信号",
+  "sender": "发件人",
+  "sender_address": "发件人地址",
+  "sender_id": "发件人ID",
+  "sender_public_key": "发件人公钥",
+  "set_account_info": "设置账户信息",
+  "set_reward_recipient": "设置奖励接受者",
+  "settings": "设置",
+  "signature": "签名",
+  "signature_hash": "签名哈希",
+  "smart_contract": "智能合约",
+  "smart_contract_creation": "智能合约创建",
+  "smart_contract_payment": "合同付款",
+  "spend_all": "花光所有",
+  "standard_fee": "标准",
+  "state": "状态",
+  "status": "地位",
+  "submit": "提交",
+  "subscriptions": "订阅",
+  "subtype": "亚型",
+  "success_alias_register": "别名注册成功。",
+  "success_clipboard_copy": "成功复制到剪贴板。",
+  "success_send_money": "签名已发送。",
+  "success_set_account_info": "您的帐户信息已成功保存。",
+  "success_set_reward_recipient": "您的奖励接收者已成功设置！",
+  "suggested_fee": "建议费用",
+  "tabulator": "制表机",
+  "time": "时间",
+  "timestamp": "时间戳",
+  "title": "标题",
+  "to": "至",
+  "token": "令牌",
+  "total": "全部的",
+  "total_amount": "总金额",
+  "total_fee": "总费用",
+  "transaction": "交易",
+  "transaction_details": "交易明细",
+  "transaction_id": "交易编号",
+  "transactions": "交易",
+  "transfer": "转移",
+  "try_again": "再试一次",
+  "type": "类型",
+  "unknown": "未知",
+  "unknown_recipients": "检测到未知收件人",
+  "unknown_recipients_text": "无法验证以下收件人：",
+  "unknown_version": "版本未知",
+  "update": "更新",
+  "update_available": "有新的更新可用",
+  "update_burst_account": "导入现有帐户",
+  "update_check": "更新检查",
+  "update_up_to_date": "您已经拥有最新版本。没有必要更新。",
+  "uploaded": "已上传",
   "uri": "URI",
-  "valid": "Valid",
-  "valid_thru": "Valid thru",
-  "validate": "Validate",
-  "validating_node": "Validating...",
-  "verified_source": "Verified and secure source",
-  "verify": "Verify",
-  "version": "Version",
-  "volume_24h": "Volume 24h",
-  "vote": "Vote",
-  "vote_casting": "Vote Casting",
-  "warning": "Warning",
-  "watch_burst_account": "Observe Account",
-  "wrong_pin": "Wrong PIN",
-  "yes": "Yes",
-  "yesterdays_change": "Last 24 Hour's Change",
-  "you": "You",
-  "you_sent_burst": "You sent Burst",
-  "your_address": "Your Address",
-  "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
+  "valid": "有效的",
+  "valid_thru": "有效通过",
+  "validate": "证实",
+  "validating_node": "证实...",
+  "verified_source": "经过验证和安全的来源",
+  "verify": "核实",
+  "version": "版本",
+  "volume_24h": "体积 24 小时",
+  "vote": "投票",
+  "vote_casting": "投票",
+  "warning": "警告",
+  "watch_burst_account": "观察帐户",
+  "wrong_pin": "密码错误",
+  "yes": "是的",
+  "yesterdays_change": "过去 24 小时的变化",
+  "you": "你",
+  "you_sent_burst": "你发送了Signa",
+  "your_address": "你的地址",
+  "your_name": "你的名字",
+  "your_passphrase": "你的密码",
+  "youve_got_burst": "你有Signa！",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
-  "set_commitment": "Set Commitment",
+  "set_commitment": "设定承诺",
   "add_commitment": "Add Commitment",
-  "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Assignment",
+  "revoke_commitment": "撤销承诺",
+  "reward_recipient_assignment": "奖励分配",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
-  "success_set_commitment": "Successfully updated your mining commitment",
+  "success_set_commitment": "已成功更新您的挖矿承诺",
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
@@ -411,9 +411,9 @@
   "automatic_nodeselection": "Automatic Node Selection",
   "no_reliable_node_reachable": "Could not reach any reliable node. Please, verify if you have an internet connection.",
   "node_successfully_connected": "Successfully connected to the node",
-  "selected_node": "Currently selected node",
-  "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "selected_node": "当前选择的节点",
+  "toggle_nodeselection_mode": "在手动或自动节点选择之间切换",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
-  "self": "self"
+  "self": "自己"
 }
